push sdoc-editor translate to transifex

--- a/media/sdoc-editor/locales/en/sdoc-editor.json
+++ b/media/sdoc-editor/locales/en/sdoc-editor.json
@@ -356,5 +356,6 @@
   "Image": "Image",
   "Table": "Table",
   "Link": "Link",
-  "Transform_to": "Transform to"
+  "Transform_to": "Transform to",
+  "Test": "Test"
 }
