--- a/media/sdoc-editor/locales/ru/sdoc-editor.json
+++ b/media/sdoc-editor/locales/ru/sdoc-editor.json
@@ -1,108 +1,164 @@
 {
-  "bold": "Полужирный",
-  "italic": "Курсив",
-  "inline_code": "Код",
-  "header_one": "Заголовок 1",
-  "header_two": "Заголовок 2",
-  "header_three": "Заголовок 3",
-  "header_four": "Заголовок 4",
-  "header_five": "Заголовок 5",
-  "header_six": "Заголовок 6",
-  "paragraph": "Параграф",
-  "quote": "Цитата",
-  "ordered_list": "Нумерованный список",
-  "unordered_list": "Маркированный список",
-  "check_list_item": "Проверка элемента списка",
-  "insert_image": "Вставить изображение",
-  "code": "Встроенный код",
-  "code_block": "Блок кода",
-  "insert_link": "Вставить ссылку",
-  "insert_table": "Вставить таблицу",
-  "save": "Сохранить",
-  "more": "Подробнее",
-  "invalid_url": "Недопустимый URL",
-  "link_address": "Адрес ссылки",
-  "image_address": "Адрес изображения",
-  "submit": "Отправить",
-  "cancel": "Отменить",
-  "switch_to_plain_text_editor": "Переключиться на обычный текстовый редактор",
-  "switch_to_rich_text_editor": "Переключиться на визуальный редактор",
-  "switch_to_viewer": "Переключиться на просмотр Markdown",
-  "help": "Помощь",
-  "Remove_table": "Удалить таблицу",
-  "column": "Столбец",
-  "row": "Строка",
-  "set_align": "Установить выравнивание",
-  "left": "Слева",
-  "center": "По центру",
-  "right": "Справа",
-  "file_saved": "Файл сохранен.",
-  "file_failed_to_save": "Не удалось сохранить файл.",
-  "star": "Добавить пометку",
-  "unstar": "Удалить пометку",
-  "back_to_parent_directory":"Вернуться в родительский каталог",
-  "edit":"изменить",
-  "copy": "Копировать",
-  "copied": "Скопировано",
-  "internal_link": "Внутренняя ссылка",
-  "copy_internal_link": "Внутренняя ссылка скопирована в буфер обмена",
-  "internal_link_desc": "Внутренняя ссылка - это ссылка на файл или папку, к которым могут обращаться пользователи с правами на чтение файла или папки.",
-  "share": "Общий доступ",
-  "share_link": "Общедоступная ссылка",
-  "generate": "Создать",
-  "add_password_protection": "Защитить паролем",
-  "password": "Пароль",
-  "at_least_8_characters": "не менее 8 символов",
-  "password_again": "Подтвердите пароль",
-  "add_auto_expiration": "Добавить авто истечение срока действия",
-  "days": "дней",
-  "please_enter_password": "Пожалуйста, введите пароль",
-  "greater_than_or_equal_to": "Больше или равно",
-  "less_than_or_equal_to": "Меньше или равно",
-  "set_permission": "Установить разрешения",
-  "preview_and_download": "Предпросмотр и скачивание",
-  "preview_only": "Только предпросмотр",
-  "please_enter_valid_days": "Пожалуйста, введите корректные дни",
-  "please_enter_a_non-negative_integer": "Пожалуйста, введите неотрицательное целое число",
-  "please_enter_days": "Пожалуйста, введите дни",
-  "password_is_too_short": "Пароль слишком короткий",
-  "passwords_do_not_match": "Пароли не совпадают",
-  "return_to_wiki_page": "Вернуться на страницу Wiki",
-  "insert_network_image": "Вставить удаленное изображение",
-  "upload_local_image": "Загрузить локальное изображение",
-  "add_link": "Добавить ссылку",
-  "file_history": "История файла",
-  "history_version": "История версий",
-  "back_to_viewer": "Вернуться к просмотру",
-  "link_title": "Название ссылки",
-  "local_draft": "Локальный черновик",
-  "use_draft": "Использовать черновик",
-  "delete_draft": "Удалить черновик",
-  "you_have_an_unsaved_draft_do_you_like_to_use_it": "У вас есть несохраненный черновик. Хотите использовать его?",
-  "local_draft_saved": "Локальный черновик сохранен",
-  "new_draft": "Новый черновик",
-  "edit_draft": "Изменить черновик",
-  "this_file_has_a_draft": "Этот файл имеет черновик.", 
-  "delete": "Удалить",
-  "comments": "Комментарии",
-  "add_a_comment": "Добавить комментарий...",
-  "no_comment_yet": "Комментариев пока нет.",
-  "Mark_as_Resolved": "Отметить как разрешенный",
-  "ask_for_review": "Спросить отзыв",
-  "review_already_exists": "Отзыв уже существует",
-  "view_review": "Просмотр отзыва",
-  "there_is_an_associated_review_with_this_file": "Есть связанный отзыв с этим файлом.",
-  "start_review": "Начать отзыв",
-  "this_file_is_in_draft_stage": "Этот файл находится в стадии черновика.",
-  "this_file_is_in_review_stage": "Этот файл находится на стадии проверки.",
-  "this_file_has_been_updated": "Этот файл был обновлен.",
-  "refresh": "Обновить",
-  "related_files": "связанные файлы",
-  "related_file": "связанный файл",
-  "no_tags": "Нет тегов",
-  "no_related_files": "Нет связанных файлов",
-  "Editing_files_in_this_browser_can_lead_to_slight_display_problems": "",
-  "userHelp": {
+  "Bold": "Полужирный",
+  "Italic": "Курсив",
+  "Underline": "Underline",
+  "Strikethrough": "Зачеркнутый",
+  "Superscript": "Superscript",
+  "Subscript": "Subscript",
+  "Inline_code": "Код",
+  "Header_one": "Заголовок 1",
+  "Header_two": "Заголовок 2",
+  "Header_three": "Заголовок 3",
+  "Header_four": "Заголовок 4",
+  "Header_five": "Заголовок 5",
+  "Header_six": "Заголовок 6",
+  "Paragraph": "Параграф",
+  "Quote": "Цитата",
+  "Ordered_list": "Нумерованный список",
+  "Unordered_list": "Маркированный список",
+  "Check_list_item": "Check list item",
+  "Insert_image": "Insert image",
+  "Insert_formula": "Insert formula",
+  "Formula": "Формула",
+  "Insert_file": "Insert file",
+  "Code": "Встроенный код",
+  "Code_block": "Code block",
+  "Insert_link": "Insert link",
+  "Insert_table": "Insert table",
+  "Valid_values_for_rows_and_columns": "Valid values for the number of rows and columns are 0 to 50",
+  "Save": "Сохранить",
+  "More": "Подробнее",
+  "Invalid_url": "Недопустимый URL",
+  "Link_address": "Адрес ссылки",
+  "Image_address": "Адрес изображения",
+  "Submit": "Отправить",
+  "Cancel": "Отменить",
+  "Switch_to_plain_text_editor": "Переключиться на обычный текстовый редактор",
+  "Switch_to_rich_text_editor": "Переключиться на визуальный редактор",
+  "Switch_to_viewer": "Переключиться на просмотр Markdown",
+  "Help": "Помощь",
+  "Column": "Столбец",
+  "Row": "Строка",
+  "Delete_table": "Delete table",
+  "Delete_row": "Delete row",
+  "Delete_column": "Delete column",
+  "Insert_row": "Insert row",
+  "Insert_column": "Insert column",
+  "Set_align": "Установить выравнивание",
+  "Left": "Слева",
+  "Center": "По центру",
+  "Right": "Справа",
+  "File_saved": "Файл сохранен.",
+  "File_failed_to_save": "Не удалось сохранить файл.",
+  "Back_to_parent_directory":"Вернуться в родительский каталог",
+  "Edit": "Редактировать",
+  "Copy": "Копировать",
+  "Copied": "Скопировано",
+  "Internal_link": "Внутренняя ссылка",
+  "Copy_internal_link": "Внутренняя ссылка скопирована в буфер обмена",
+  "Internal_link_desc": "Внутренняя ссылка - это ссылка на файл или папку, к которым могут обращаться пользователи с правами на чтение файла или папки.",
+  "Share": "Общий доступ",
+  "Share_link": "Общедоступная ссылка",
+  "Generate": "Создать",
+  "Add_password_protection": "Защитить паролем",
+  "Password": "Пароль",
+  "At_least_8_characters": "не менее 8 символов",
+  "Password_again": "Подтвердите пароль",
+  "Add_auto_expiration": "Добавить авто истечение срока действия",
+  "Days": "дней",
+  "Please_enter_password": "Пожалуйста, введите пароль",
+  "Greater_than_or_equal_to": "Больше или равно",
+  "Less_than_or_equal_to": "Меньше или равно",
+  "Set_permission": "Установить разрешения",
+  "Preview_and_download": "Предпросмотр и скачивание",
+  "Preview_only": "Только предпросмотр",
+  "Please_enter_valid_days": "Пожалуйста, введите корректные дни",
+  "Please_enter_a_non-negative_integer": "Пожалуйста, введите неотрицательное целое число",
+  "Please_enter_days": "Пожалуйста, введите дни",
+  "Password_is_too_short": "Пароль слишком короткий",
+  "Passwords_do_not_match": "Пароли не совпадают",
+  "Return_to_wiki_page": "Вернуться на страницу Wiki",
+  "Insert_network_image": "Вставить удаленное изображение",
+  "Upload_local_image": "Загрузить локальное изображение",
+  "Add_link": "Добавить ссылку",
+  "File_history": "File history",
+  "History_version": "History versions",
+  "Back_to_viewer": "Back to viewer",
+  "Link_title": "Название ссылки",
+  "Local_draft": "Локальный черновик",
+  "Use_draft": "Использовать черновик",
+  "Delete_draft": "Удалить черновик",
+  "You_have_an_unsaved_draft_do_you_like_to_use_it": "У вас есть несохраненный черновик. Хотите использовать его?",
+  "Local_draft_saved": "Локальный черновик сохранен",
+  "New_draft": "New draft",
+  "View_draft": "View draft",
+  "Publish": "Опубликовать",
+  "This_file_has_a_draft": "Этот файл имеет черновик.", 
+  "Delete": "Удалить",
+  "Reply": "Ответ",
+  "Comment": "Комментарий",
+  "Comments": "Комментарии",
+  "All_comments": "All comments",
+  "Resolved_comments": "Resolved comments",
+  "Unresolved_comments": "Unresolved comments",
+  "Total_1_comment": "Total 1 comment",
+  "Total_count_comments": "Total {{count}} comments",
+  "Add_a_comment": "Добавить комментарий...",
+  "No_comment_yet": "Комментариев пока нет.",
+  "Mark_as_Resolved": "Отметить как решенный",
+  "Resubmit": "Resubmit",
+  "Resubmitted": "Resubmitted",
+  "Ask_for_review": "Спросить отзыв",
+  "Review_already_exists": "Отзыв уже существует",
+  "View_review": "Просмотр отзыва",
+  "There_is_an_associated_review_with_this_file": "Есть связанный отзыв с этим файлом.",
+  "Start_review": "Начать отзыв",
+  "This_file_is_in_draft_stage": "Этот файл находится в стадии черновика.",
+  "This_file_is_in_review_stage": "Этот файл находится на стадии проверки.",
+  "This_file_has_been_updated": "Этот файл был обновлен.",
+  "Refresh": "Обновить",
+  "Related_files": "Related files",
+  "Related_file": "Related file",
+  "No_tags": "Нет тегов",
+  "Date": "Дата",
+  "Participants": "Участники",
+  "Meeting_note": "Заметка о встрече",
+  "Chooser_document_type": "Выбор типа документа",
+  "Empty": "Пусто",
+  "No_related_files": "Нет связанных файлов",
+  "No_out_line": "Нет контура",
+  "Editing_files_in_this_browser_can_lead_to_slight_display_problems": "Изменение файлов в этом браузере может привести к небольшим проблемам с отображением.",
+  "No_document_improvement_suggestion": "Нет предложений по улучшению документа",
+  "Hide_side_panel": "Скрыть боковую панель",
+  "Show_side_panel": "Показать боковую панель",
+  "Show_resolved_comments": "Показать разрешенные комментарии",
+  "Update": "Изменить",
+  "Width": "Ширина",
+  "Height": "Высота",
+  "Full_screen": "Полный экран",
+  "Insert_library_image": "Вставить изображение библиотеки",
+  "Size": "Размер",
+  "Location": "Местонахождение",
+  "Last_update": "Last update",
+  "Tags": "Теги",
+  "Add_participants": "Добавить участников",
+  "Clear_format": "Clear format",
+  "MarkdownLint": {
+    "missing_h1": {
+      "description": "В документе нет h1",
+      "issue" : "Отсутствует h1"
+    },
+    "heading_end_with_colon": {
+      "description": "Завершающая пунктуация в заголовке не должна быть двоеточием",
+      "issue": "Заголовок заканчивается двоеточием"
+    },
+    "heading_increase_irregular": {
+      "description": "Уровни заголовков должны увеличиваться только на один уровень за раз",
+      "issue": "Проблема уровня заголовка"
+    }
+  },
+  "Shortcut_help": "Справка по горячим клавишам",
+  "User_help": {
     "title": "Горячие клавиши",
     "userHelpData": [
       {
@@ -145,6 +201,11 @@
           "Escape_table": "Выделить таблицу"
         }
       }, {
+        "shortcutType": "Горячие клавиши для формул",
+        "shortcutData": {
+          "Insert_Formula": "Вставить формулу"
+        }
+      }, {
         "shortcutType":"Встроенные горячие клавиши",
         "shortcutData": {
           "Bold": "Полужирный",
@@ -165,5 +226,135 @@
         }
       }
     ]
-  }
+  },
+  "The_link_address_is_required": "The link address is required.",
+  "The_link_title_is_required": "The link title is required.",
+  "The_link_address_is_invalid": "The link address is invalid, please enter a correct connection address.",
+  "All_changes_saved": "All changes saved",
+  "Saving": "Сохранение...",
+  "Collaborators": "Collaborators",
+  "Online_members": "Online members",
+  "Me": "me",
+  "Server_is_not_connected_Operation_will_be_sent_to_server_later": "Server is not connected. Operation will be sent to server later.",
+  "Server_is_disconnected_Reconnecting": "Server is disconnected. Reconnecting...",
+  "Server_is_reconnected": "Server is reconnected.",
+  "Outline": "Outline",
+  "Headings_you_add_to_the_document_will_appear_here": "Headings you add to the document will appear here",
+  "Open_parent_folder": "Открыть родительскую папку",
+  "Redo": "redo",
+  "Undo": "undo",
+  "Open_link": "Open link",
+  "Customize_the_number_of_rows_and_columns": "Customize the number of rows and columns",
+  "Rows": "Строки",
+  "Columns": "Столбцы",
+  "Please_enter_title": "Please enter title",
+  "Please_enter_text": "Please enter text",
+  "Row(s)": "row(s)",
+  "Column(s)": "column(s)",
+  "Insert_below": "Insert below",
+  "Insert_above": "Insert above",
+  "Insert_on_the_right": "Insert on the right",
+  "Insert_on_the_left": "Insert on the left",
+  "Starred": "Отмеченные",
+  "Unstarred": "Unstarred",
+  "Star": "Отметить",
+  "Unstar": "Снять отметку",
+  "Auto_wrap": "Auto wrap",
+  "Add_comment": "Add comment",
+  "Delete_comment": "Delete comment",
+  "Delete_reply": "Delete reply",
+  "Are_you_sure_to_delete_this_comment": "Are you sure to delete this comment?",
+  "Are_you_sure_to_delete_this_reply": "Are you sure to delete this reply?",
+  "Enter_a_comment": "Enter a comment",
+  "Enter_a_reply": "Enter a reply",
+  "Reopen_discussion" : "Adding a reply will reopen this discussion",
+  "Confirm": "Подтвердить",
+  "View_changes": "View changes",
+  "Revision": "Revision",
+  "Error": "Ошибка",
+  "Start_revise": "Start revise",
+  "Failed_to_execute_operation_on_server": "Failed to execute operation on server, the current operation has been withdrawn",
+  "Start_revise_tip": "Create a temporary document and modify on it, merge it back after reviewing changes",
+  "Load_doc_content_error": "Load doc content error",
+  "Sdoc_format_invalid": "The content of the document does not conform to the sdoc specification",
+  "Draft": "Черновик",
+  "Unmark_as_draft": "Убрать пометку как черновик",
+  "Background_color": "Background color",
+  "No_color": "No color",
+  "Standard_color": "Standard color",
+  "Recently_used": "Recently used",
+  "More_color": "More color",
+  "White": "White",
+  "Black": "Black",
+  "Blue_grey": "Blue_grey",
+  "Blue": "Blue",
+  "Sky_blue": "Sky_blue",
+  "Green": "Green",
+  "Red": "Red",
+  "Orange": "Orange",
+  "Yellow": "Yellow",
+  "Purple": "Purple",
+  "Light_grey_x": "Light grey {{value}}",
+  "Dark_grey_x": "Dark grey {{value}}",
+  "Light_blue_grey_x": "Light blue grey {{value}}",
+  "Light_blue_x": "Light blue {{value}}",
+  "Light_sky_blue_x": "Light sky blue {{value}}",
+  "Light_green_x": "Light green {{value}}",
+  "Light_red_x": "Light red {{value}}",
+  "Light_orange_x": "Light orange {{value}}",
+  "Light_yellow_x": "Light yellow {{value}}",
+  "Light_purple_x": "Light purple {{value}}",
+  "Dark_blue_grey_x": "Dark blue grey {{value}}",
+  "Dark_blue_x": "Dark blue {{value}}",
+  "Dark_sky_blue_x": "Dark sky blue {{value}}",
+  "Dark_green_x": "Dark green {{value}}",
+  "Dark_red_x": "Dark red {{value}}",
+  "Dark_orange_x": "Dark orange {{value}}",
+  "Dark_yellow_x": "Dark yellow {{value}}",
+  "Dark_purple_x": "Dark purple {{value}}",
+  "Standard_dark_red": "Standard dark red",
+  "Standard_red": "Standard red",
+  "Standard_orange": "Standard orange",
+  "Standard_yellow": "Standard yellow",
+  "Standard_light_green": "Standard light green",
+  "Standard_green": "Standard green",
+  "Standard_light_blue": "Standard light blue",
+  "Standard_blue": "Standard blue",
+  "Standard_dark_blue": "Standard dark blue",
+  "Standard_purple": "Standard purple",
+  "Highlight_color": "Highlight",
+  "Font_color": "Font color",
+  "Default": "По умолчанию",
+  "No_revisions": "No revisions",
+  "1_revision": "1 revision",
+  "x_revisions": "{{count}} revisions",
+  "Creator": "Создатель ",
+  "Created_time": "Created time",
+  "Created_at": "Created at",
+  "Resolved_tip": "Mark as resolved and hide discussion",
+  "Search_language": "Search language",
+  "Sdoc_error_tip": "The document has errors and cannot be displayed. Please try to fix it automatically by clicking the button below.",
+  "Repair": "Repair",
+  "Font_size": "Font size",
+  "Increase_font_size": "Increase font size",
+  "Reduce_font_size": "Reduce font size",
+  "Font": "Шрифт",
+  "All_fonts": "All fonts",
+  "Default_font": "Default font",
+  "Pending_operations_exceed_limit": "There are multiple operations not synced to the server. Please check your network.",
+  "Recently_saved": "Recently saved",
+  "Sdoc_document" : "Sdoc document",
+  "Text_Link": "Text Link",
+  "Icon_and_text_Link": "Icon and text Link",
+  "Card": "Card",
+  "Select_sdoc_document": "Select sdoc document",
+  "Local_file": "Local file",
+  "Internal_server_exec_operations_error": "An exception occurred on the server, please refresh the page and try again",
+  "Failed_to_sync_with_server_operations": "Synchronization with the server failed, please refresh the page",
+  "Style": "Style",
+  "Insert": "Insert",
+  "Image": "Изображение",
+  "Table": "Таблица",
+  "Link": "Ссылка",
+  "Transform_to": "Transform to"
 }
