--- a/media/sdoc-editor/locales/cs/sdoc-editor.json
+++ b/media/sdoc-editor/locales/cs/sdoc-editor.json
@@ -1,108 +1,164 @@
 {
-  "bold": "Tučně",
-  "italic": "Kurzíva",
-  "inline_code": "Kód",
-  "header_one": "Záhlaví 1",
-  "header_two": "Záhlaví 2",
-  "header_three": "Záhlaví 3",
-  "header_four": "Záhlaví 4",
-  "header_five": "Záhlaví 5",
-  "header_six": "Záhlaví 6",
-  "paragraph": "Odstavec",
-  "quote": "Citace",
-  "ordered_list": "Číslovaný seznam",
-  "unordered_list": "Nečíslovaný seznam",
-  "check_list_item": "Zkontrolovat položku seznamu",
-  "insert_image": "Vložit obrázek",
-  "code": "Řádkový kód",
-  "code_block": "Blok kódu",
-  "insert_link": "Vložit odkaz",
-  "insert_table": "Vložit tabulku",
-  "save": "Uložit",
-  "more": "Více",
-  "invalid_url": "Chybná URL",
-  "link_address": "Adresa odkazu",
-  "image_address": "Adresa obrázku",
-  "submit": "Odeslat",
-  "cancel": "Storno",
-  "switch_to_plain_text_editor": "Přepnout do textového editoru",
-  "switch_to_rich_text_editor": "Přepnout do rozšířeného textového editoru",
-  "switch_to_viewer": "Přepnout do značkovacího prohlížeče",
-  "help": "Pomoc",
-  "Remove_table": "Odebrat tabulku",
-  "column": "Sloupec",
-  "row": "Řádek",
-  "set_align": "Nastavit zarovnání",
-  "left": "Vlevo",
-  "center": "Střed",
-  "right": "Vpravo",
-  "file_saved": "Soubor uložen",
-  "file_failed_to_save": "Soubor nebyl uložen",
-  "star": "Přidat hvězdičku",
-  "unstar": "Odebrat hvězdičku",
-  "back_to_parent_directory":"Zpět do nadřazeného adresáře",
-  "edit":"editovat",
-  "copy": "Kopírovat",
-  "copied": "Zkopírováno",
-  "internal_link": "Interní odkaz",
-  "copy_internal_link": "Interní odkaz byl zkopírován do schránky",
-  "internal_link_desc": "Interní odkaz směřuje na soubor nebo složku u které má uživatel oprávnění ke čtení.",
-  "share": "Sdílet",
-  "share_link": "Veřejný odkaz",
-  "generate": "Generovat",
-  "add_password_protection": "Přidat ochranu heslem",
-  "password": "Heslo",
-  "at_least_8_characters": "nejméně 8 znaků",
-  "password_again": "Heslo znovu",
-  "add_auto_expiration": "Přidat automatickou expiraci",
-  "days": "dní",
-  "please_enter_password": "Zadejte heslo",
-  "greater_than_or_equal_to": "Vyšší nebo rovno",
-  "less_than_or_equal_to": "Nižší nebo rovno",
-  "set_permission": "Nastavit oprávnění",
-  "preview_and_download": "Zobrazit a stáhnout",
-  "preview_only": "Pouze zobrazit",
-  "please_enter_valid_days": "Zadejte platné dny",
-  "please_enter_a_non-negative_integer": "Vložte prosím nezáporné celé číslo",
-  "please_enter_days": "Prosím zadejte dny",
-  "password_is_too_short": "Heslo je příliš krátké.",
-  "passwords_do_not_match": "Hesla nesouhlasí",
-  "return_to_wiki_page": "Návrat na stránku Wiki",
-  "insert_network_image": "Vložit síťový obrázek",
-  "upload_local_image": "Nahrát lokální obrázek",
-  "add_link": "Přidat odkaz",
-  "file_history": "Historie souboru",
-  "history_version": "Historie verzí",
-  "back_to_viewer": "Zpět na prohlížeč",
-  "link_title": "Název odkazu",
-  "local_draft": "Místní koncept",
-  "use_draft": "Použít koncept",
-  "delete_draft": "Smazat koncept",
-  "you_have_an_unsaved_draft_do_you_like_to_use_it": "Máte neuložený koncept. Chcete ho použít?",
-  "local_draft_saved": "Místní koncept byl uložen",
-  "new_draft": "Nový návrh",
-  "edit_draft": "Upravit návrh",
-  "this_file_has_a_draft": "Tento soubor má koncept.", 
-  "delete": "Smazat",
-  "comments": "Komentáře",
-  "add_a_comment": "Přidat komentář…",
-  "no_comment_yet": "Žádné komentáře",
+  "Bold": "Tučně",
+  "Italic": "Kurzíva",
+  "Underline": "Underline",
+  "Strikethrough": "Strikethrough",
+  "Superscript": "Superscript",
+  "Subscript": "Subscript",
+  "Inline_code": "Kód",
+  "Header_one": "Záhlaví 1",
+  "Header_two": "Záhlaví 2",
+  "Header_three": "Záhlaví 3",
+  "Header_four": "Záhlaví 4",
+  "Header_five": "Záhlaví 5",
+  "Header_six": "Záhlaví 6",
+  "Paragraph": "Odstavec",
+  "Quote": "Citace",
+  "Ordered_list": "Seřazený seznam",
+  "Unordered_list": "Neseřazený seznam",
+  "Check_list_item": "Check list item",
+  "Insert_image": "Insert image",
+  "Insert_formula": "Insert formula",
+  "Formula": "Formula",
+  "Insert_file": "Insert file",
+  "Code": "Řádkový kód",
+  "Code_block": "Code block",
+  "Insert_link": "Insert link",
+  "Insert_table": "Insert table",
+  "Valid_values_for_rows_and_columns": "Valid values for the number of rows and columns are 0 to 50",
+  "Save": "Uložit",
+  "More": "Více",
+  "Invalid_url": "Chybná URL",
+  "Link_address": "Adresa odkazu",
+  "Image_address": "Adresa obrázku",
+  "Submit": "Odeslat",
+  "Cancel": "Storno",
+  "Switch_to_plain_text_editor": "Přepnout do textového editoru",
+  "Switch_to_rich_text_editor": "Přepnout do rozšířeného textového editoru",
+  "Switch_to_viewer": "Přepnout do značkovacího prohlížeče",
+  "Help": "Pomoc",
+  "Column": "Sloupec",
+  "Row": "Řádek",
+  "Delete_table": "Delete table",
+  "Delete_row": "Delete row",
+  "Delete_column": "Delete column",
+  "Insert_row": "Insert row",
+  "Insert_column": "Insert column",
+  "Set_align": "Nastavit zarovnání",
+  "Left": "Vlevo",
+  "Center": "Střed",
+  "Right": "Vpravo",
+  "File_saved": "Soubor uložen",
+  "File_failed_to_save": "Soubor nebyl uložen",
+  "Back_to_parent_directory":"Zpět do nadřazeného adresáře",
+  "Edit": "Upravit",
+  "Copy": "Kopírovat",
+  "Copied": "Zkopírováno",
+  "Internal_link": "Interní odkaz",
+  "Copy_internal_link": "Interní odkaz byl zkopírován do schránky",
+  "Internal_link_desc": "Interní odkaz směřuje na soubor nebo složku u které má uživatel oprávnění ke čtení.",
+  "Share": "Sdílet",
+  "Share_link": "Share link",
+  "Generate": "Generovat",
+  "Add_password_protection": "Přidat ochranu heslem",
+  "Password": "Heslo",
+  "At_least_8_characters": "nejméně 8 znaků",
+  "Password_again": "Heslo znovu",
+  "Add_auto_expiration": "Přidat automatickou expiraci",
+  "Days": "dní",
+  "Please_enter_password": "Zadejte heslo",
+  "Greater_than_or_equal_to": "Vyšší nebo rovno",
+  "Less_than_or_equal_to": "Nižší nebo rovno",
+  "Set_permission": "Nastavit oprávnění",
+  "Preview_and_download": "Zobrazit a stáhnout",
+  "Preview_only": "Pouze zobrazit",
+  "Please_enter_valid_days": "Zadejte platné dny",
+  "Please_enter_a_non-negative_integer": "Vložte prosím nezáporné celé číslo",
+  "Please_enter_days": "Prosím zadejte dny",
+  "Password_is_too_short": "Heslo je příliš krátké.",
+  "Passwords_do_not_match": "Hesla nesouhlasí",
+  "Return_to_wiki_page": "Návrat na stránku Wiki",
+  "Insert_network_image": "Vložit síťový obrázek",
+  "Upload_local_image": "Nahrát lokální obrázek",
+  "Add_link": "Přidat odkaz",
+  "File_history": "File history",
+  "History_version": "History versions",
+  "Back_to_viewer": "Back to viewer",
+  "Link_title": "Název odkazu",
+  "Local_draft": "Místní koncept",
+  "Use_draft": "Použít koncept",
+  "Delete_draft": "Smazat koncept",
+  "You_have_an_unsaved_draft_do_you_like_to_use_it": "Máte neuložený koncept. Chcete ho použít?",
+  "Local_draft_saved": "Místní koncept byl uložen",
+  "New_draft": "New draft",
+  "View_draft": "View draft",
+  "Publish": "Zveřejnit",
+  "This_file_has_a_draft": "Tento soubor má koncept.", 
+  "Delete": "Smazat",
+  "Reply": "Odpověď",
+  "Comment": "Komentář",
+  "Comments": "Komentáře",
+  "All_comments": "All comments",
+  "Resolved_comments": "Resolved comments",
+  "Unresolved_comments": "Unresolved comments",
+  "Total_1_comment": "Total 1 comment",
+  "Total_count_comments": "Total {{count}} comments",
+  "Add_a_comment": "Přidat komentář…",
+  "No_comment_yet": "Žádné komentáře",
   "Mark_as_Resolved": "Označit jako vyřešené",
-  "ask_for_review": "Požádat o kontrolu",
-  "review_already_exists": "Kontrola již existuje. ",
-  "view_review": "Zobrazit kontrolu",
-  "there_is_an_associated_review_with_this_file": "K tomuto souboru je přiřazená kontrola",
-  "start_review": "Začít kontrolu",
-  "this_file_is_in_draft_stage": "Tento soubor je ve fázi návrhu.",
-  "this_file_is_in_review_stage": "Tento soubor je ve fázi kontroly.",
-  "this_file_has_been_updated": "Tento soubor byl aktualizován.",
-  "refresh": "Obnovit",
-  "related_files": "související soubory",
-  "related_file": "související soubor",
-  "no_tags": "Žádné značky",
-  "no_related_files": "Žádné související soubory",
-  "Editing_files_in_this_browser_can_lead_to_slight_display_problems": "",
-  "userHelp": {
+  "Resubmit": "Resubmit",
+  "Resubmitted": "Resubmitted",
+  "Ask_for_review": "Požádat o kontrolu",
+  "Review_already_exists": "Kontrola již existuje. ",
+  "View_review": "Zobrazit kontrolu",
+  "There_is_an_associated_review_with_this_file": "K tomuto souboru je přiřazená kontrola",
+  "Start_review": "Začít kontrolu",
+  "This_file_is_in_draft_stage": "Tento soubor je ve fázi návrhu.",
+  "This_file_is_in_review_stage": "Tento soubor je ve fázi kontroly.",
+  "This_file_has_been_updated": "Tento soubor byl aktualizován.",
+  "Refresh": "Obnovit",
+  "Related_files": "Related files",
+  "Related_file": "Related file",
+  "No_tags": "Žádné značky",
+  "Date": "Datum",
+  "Participants": "Účastníci",
+  "Meeting_note": "Poznámky ze schůzky",
+  "Chooser_document_type": "Výběr typu dokumentu",
+  "Empty": "Prázdný",
+  "No_related_files": "Žádné související soubory",
+  "No_out_line": "Bez obrysu",
+  "Editing_files_in_this_browser_can_lead_to_slight_display_problems": "Úpravy souborů v tomto prohlížeči mohou způsobit malé problémy se zobrazením.",
+  "No_document_improvement_suggestion": "Žádný návrh na zlepšení dokumentu",
+  "Hide_side_panel": "Skrýt postranní panel",
+  "Show_side_panel": "Zobrazit postranní panel",
+  "Show_resolved_comments": "Zobrazit vyřešené komentáře",
+  "Update": "Aktualizovat",
+  "Width": "Šířka",
+  "Height": "Výška",
+  "Full_screen": "Celá obrazovka",
+  "Insert_library_image": "Vložit obrázek knihovny",
+  "Size": "Velikost",
+  "Location": "Umístění",
+  "Last_update": "Last update",
+  "Tags": "Štítky",
+  "Add_participants": "Přidat účastníky",
+  "Clear_format": "Clear format",
+  "MarkdownLint": {
+    "missing_h1": {
+      "description": "V dokumentu není žádný h1",
+      "issue" : "Chybí h1"
+    },
+    "heading_end_with_colon": {
+      "description": "Koncová interpunkce v záhlaví by neměla být dvojtečka",
+      "issue": "Záhlaví končí dvojtečkou"
+    },
+    "heading_increase_irregular": {
+      "description": "Úrovně nadpisů by se měly zvyšovat vždy pouze o jednu úroveň",
+      "issue": "Problém s úrovní nadpisu"
+    }
+  },
+  "Shortcut_help": "Shortcut help",
+  "User_help": {
     "title": "Klávesové zkratky",
     "userHelpData": [
       {
@@ -145,6 +201,11 @@
           "Escape_table": "Opustit tabulku"
         }
       }, {
+        "shortcutType": "Zkratky vzorečku",
+        "shortcutData": {
+          "Insert_Formula": "Insert Formula"
+        }
+      }, {
         "shortcutType":"Řádkové zkratky",
         "shortcutData": {
           "Bold": "Tučně",
@@ -165,5 +226,135 @@
         }
       }
     ]
-  }
+  },
+  "The_link_address_is_required": "The link address is required.",
+  "The_link_title_is_required": "The link title is required.",
+  "The_link_address_is_invalid": "The link address is invalid, please enter a correct connection address.",
+  "All_changes_saved": "All changes saved",
+  "Saving": "Ukládání…",
+  "Collaborators": "Collaborators",
+  "Online_members": "Online members",
+  "Me": "me",
+  "Server_is_not_connected_Operation_will_be_sent_to_server_later": "Server is not connected. Operation will be sent to server later.",
+  "Server_is_disconnected_Reconnecting": "Server is disconnected. Reconnecting...",
+  "Server_is_reconnected": "Server is reconnected.",
+  "Outline": "Outline",
+  "Headings_you_add_to_the_document_will_appear_here": "Headings you add to the document will appear here",
+  "Open_parent_folder": "Otevřít rodičovský adresář",
+  "Redo": "redo",
+  "Undo": "undo",
+  "Open_link": "Open link",
+  "Customize_the_number_of_rows_and_columns": "Customize the number of rows and columns",
+  "Rows": "Řádky",
+  "Columns": "Sloupce",
+  "Please_enter_title": "Please enter title",
+  "Please_enter_text": "Please enter text",
+  "Row(s)": "row(s)",
+  "Column(s)": "column(s)",
+  "Insert_below": "Insert below",
+  "Insert_above": "Insert above",
+  "Insert_on_the_right": "Insert on the right",
+  "Insert_on_the_left": "Insert on the left",
+  "Starred": "Starred",
+  "Unstarred": "Unstarred",
+  "Star": "Hvězdička",
+  "Unstar": "Odebrat z oblíbených",
+  "Auto_wrap": "Auto wrap",
+  "Add_comment": "Add comment",
+  "Delete_comment": "Delete comment",
+  "Delete_reply": "Delete reply",
+  "Are_you_sure_to_delete_this_comment": "Are you sure to delete this comment?",
+  "Are_you_sure_to_delete_this_reply": "Are you sure to delete this reply?",
+  "Enter_a_comment": "Enter a comment",
+  "Enter_a_reply": "Enter a reply",
+  "Reopen_discussion" : "Adding a reply will reopen this discussion",
+  "Confirm": "Potvrdit",
+  "View_changes": "View changes",
+  "Revision": "Revision",
+  "Error": "Chyba",
+  "Start_revise": "Start revise",
+  "Failed_to_execute_operation_on_server": "Failed to execute operation on server, the current operation has been withdrawn",
+  "Start_revise_tip": "Create a temporary document and modify on it, merge it back after reviewing changes",
+  "Load_doc_content_error": "Load doc content error",
+  "Sdoc_format_invalid": "The content of the document does not conform to the sdoc specification",
+  "Draft": "Koncept",
+  "Unmark_as_draft": "Unmark as draft",
+  "Background_color": "Background color",
+  "No_color": "No color",
+  "Standard_color": "Standard color",
+  "Recently_used": "Recently used",
+  "More_color": "More color",
+  "White": "White",
+  "Black": "Black",
+  "Blue_grey": "Blue_grey",
+  "Blue": "Blue",
+  "Sky_blue": "Sky_blue",
+  "Green": "Green",
+  "Red": "Red",
+  "Orange": "Orange",
+  "Yellow": "Yellow",
+  "Purple": "Purple",
+  "Light_grey_x": "Light grey {{value}}",
+  "Dark_grey_x": "Dark grey {{value}}",
+  "Light_blue_grey_x": "Light blue grey {{value}}",
+  "Light_blue_x": "Light blue {{value}}",
+  "Light_sky_blue_x": "Light sky blue {{value}}",
+  "Light_green_x": "Light green {{value}}",
+  "Light_red_x": "Light red {{value}}",
+  "Light_orange_x": "Light orange {{value}}",
+  "Light_yellow_x": "Light yellow {{value}}",
+  "Light_purple_x": "Light purple {{value}}",
+  "Dark_blue_grey_x": "Dark blue grey {{value}}",
+  "Dark_blue_x": "Dark blue {{value}}",
+  "Dark_sky_blue_x": "Dark sky blue {{value}}",
+  "Dark_green_x": "Dark green {{value}}",
+  "Dark_red_x": "Dark red {{value}}",
+  "Dark_orange_x": "Dark orange {{value}}",
+  "Dark_yellow_x": "Dark yellow {{value}}",
+  "Dark_purple_x": "Dark purple {{value}}",
+  "Standard_dark_red": "Standard dark red",
+  "Standard_red": "Standard red",
+  "Standard_orange": "Standard orange",
+  "Standard_yellow": "Standard yellow",
+  "Standard_light_green": "Standard light green",
+  "Standard_green": "Standard green",
+  "Standard_light_blue": "Standard light blue",
+  "Standard_blue": "Standard blue",
+  "Standard_dark_blue": "Standard dark blue",
+  "Standard_purple": "Standard purple",
+  "Highlight_color": "Highlight",
+  "Font_color": "Font color",
+  "Default": "Výchozí",
+  "No_revisions": "No revisions",
+  "1_revision": "1 revision",
+  "x_revisions": "{{count}} revisions",
+  "Creator": "Vytvořil",
+  "Created_time": "Created time",
+  "Created_at": "Created at",
+  "Resolved_tip": "Mark as resolved and hide discussion",
+  "Search_language": "Search language",
+  "Sdoc_error_tip": "The document has errors and cannot be displayed. Please try to fix it automatically by clicking the button below.",
+  "Repair": "Repair",
+  "Font_size": "Font size",
+  "Increase_font_size": "Increase font size",
+  "Reduce_font_size": "Reduce font size",
+  "Font": "Font",
+  "All_fonts": "All fonts",
+  "Default_font": "Default font",
+  "Pending_operations_exceed_limit": "There are multiple operations not synced to the server. Please check your network.",
+  "Recently_saved": "Recently saved",
+  "Sdoc_document" : "Sdoc document",
+  "Text_Link": "Text Link",
+  "Icon_and_text_Link": "Icon and text Link",
+  "Card": "Card",
+  "Select_sdoc_document": "Select sdoc document",
+  "Local_file": "Local file",
+  "Internal_server_exec_operations_error": "An exception occurred on the server, please refresh the page and try again",
+  "Failed_to_sync_with_server_operations": "Synchronization with the server failed, please refresh the page",
+  "Style": "Style",
+  "Insert": "Insert",
+  "Image": "Obrázek",
+  "Table": "Tabulka",
+  "Link": "Odkaz",
+  "Transform_to": "Transform to"
 }
