--- a/media/sdoc-editor/locales/es/sdoc-editor.json
+++ b/media/sdoc-editor/locales/es/sdoc-editor.json
@@ -1,108 +1,164 @@
 {
-  "bold": "Negrita",
-  "italic": "Itálica",
-  "inline_code": "Código",
-  "header_one": "Encabezado 1",
-  "header_two": "Encabezado 2",
-  "header_three": "Encabezado 3",
-  "header_four": "Encabezado 4",
-  "header_five": "Encabezado 5",
-  "header_six": "Encabezado 6",
-  "paragraph": "Párrafo",
-  "quote": "Cita",
-  "ordered_list": "Lista Ordenada",
-  "unordered_list": "Lista Desordenada",
-  "check_list_item": "Check List Item",
-  "insert_image": "Insertar Imagen",
-  "code": "Inline Code",
-  "code_block": "Bloque de Código",
-  "insert_link": "Insertar Enlace",
-  "insert_table": "Insertar Tabla",
-  "save": "Guardar",
-  "more": "Más",
-  "invalid_url": "URL Inválida",
-  "link_address": "Dirección del enlace",
-  "image_address": "Dirección de la imagen",
-  "submit": "Enviar",
-  "cancel": "Cancelar",
-  "switch_to_plain_text_editor": "Cambiar a editor de texto sin formato",
-  "switch_to_rich_text_editor": "Cambiar a editor de texto enriquecido",
-  "switch_to_viewer": "Cambiar a visualizador Markdown",
-  "help": "Ayuda",
-  "Remove_table": "Eliminar tabla",
-  "column": "Columna",
-  "row": "Fila",
-  "set_align": "Establecer alineación",
-  "left": "Izquierda",
-  "center": "Centrar",
-  "right": "derecha",
-  "file_saved": "Archivo guardado",
-  "file_failed_to_save": "Fallo al guardar archivo",
-  "star": "Add star",
-  "unstar": "Remove star",
-  "back_to_parent_directory":"Volver a la carpeta superior",
-  "edit":"editar",
-  "copy": "Copiar",
-  "copied": "Copiado",
-  "internal_link": "Enlace interno",
-  "copy_internal_link": "El enlace interno ha sido copiado al portapapeles",
-  "internal_link_desc": "Un enlace interno es un enlace a un archivo o carpeta que puede ser accedido por usuarios con permiso de lectura al archivo o carpeta. ",
-  "share": "Compartir",
-  "share_link": "Compartir enlace",
-  "generate": "Generar",
-  "add_password_protection": "Agregar protección por contraseña",
-  "password": "Contraseña ",
-  "at_least_8_characters": "al menos 8 caracteres",
-  "password_again": "Repetir contraseña",
-  "add_auto_expiration": "Agregar vencimiento automático",
-  "days": "días",
-  "please_enter_password": "Ingresa una contraseña",
-  "greater_than_or_equal_to": "Mayor o igual que",
-  "less_than_or_equal_to": "Menor o igual que",
-  "set_permission": "Establecer permiso",
-  "preview_and_download": "Vista previa y descargar",
-  "preview_only": "Vista previa solamente",
-  "please_enter_valid_days": "Ingresa cantidad válida de días",
-  "please_enter_a_non-negative_integer": "Por favor, ingrese un número entero no negativo",
-  "please_enter_days": "Ingresa cantidad de días",
-  "password_is_too_short": "Contraseña demasiado corta",
-  "passwords_do_not_match": "Las contraseñas no concuerdan",
-  "return_to_wiki_page": "Volver a la página del Wiki",
-  "insert_network_image": "Insertar imágen desde la red",
-  "upload_local_image": "Subir imagen local",
-  "add_link": "Agregar enlace",
-  "file_history": "Historial del Archivo",
-  "history_version": "Historial de Versiones",
-  "back_to_viewer": "Volver al Visualizador",
-  "link_title": "Título del enlace",
-  "local_draft": "Borrador local",
-  "use_draft": "Usar borrador",
-  "delete_draft": "Eliminar borrador",
-  "you_have_an_unsaved_draft_do_you_like_to_use_it": "Tienes un borrador sin guardar. ¿Deseas utilizarlo?",
-  "local_draft_saved": "Borrador local guardado",
-  "new_draft": "Nuevo Borrador",
-  "edit_draft": "Editar Borrador",
-  "this_file_has_a_draft": "Este archivo tiene un borrador", 
-  "delete": "Borrar",
-  "comments": "Comentarios",
-  "add_a_comment": "Agregar un comentario...",
-  "no_comment_yet": "No hay comentarios.",
-  "Mark_as_Resolved": "Marcar como resuelto",
-  "ask_for_review": "Solicitar revisión",
-  "review_already_exists": "La revisión ya existe",
-  "view_review": "Ver revisión",
-  "there_is_an_associated_review_with_this_file": "Hay una revisión asociada con este archivo",
-  "start_review": "Iniciar revisión",
-  "this_file_is_in_draft_stage": "Este archivo está en la etapa de borrador",
-  "this_file_is_in_review_stage": "Este archivo está en estado de revisión.",
-  "this_file_has_been_updated": "Este archivo ha sido actualizado.",
-  "refresh": "Refrescar",
-  "related_files": "archivos relacionados",
-  "related_file": "archivo relacionado",
-  "no_tags": "Sin etiquetas",
-  "no_related_files": "Sin archivos relacionados",
-  "Editing_files_in_this_browser_can_lead_to_slight_display_problems": "",
-  "userHelp": {
+  "Bold": "Negrita",
+  "Italic": "Itálica",
+  "Underline": "Underline",
+  "Strikethrough": "Tachado",
+  "Superscript": "Superscript",
+  "Subscript": "Subscript",
+  "Inline_code": "Código",
+  "Header_one": "Encabezado 1",
+  "Header_two": "Encabezado 2",
+  "Header_three": "Encabezado 3",
+  "Header_four": "Encabezado 4",
+  "Header_five": "Encabezado 5",
+  "Header_six": "Encabezado 6",
+  "Paragraph": "Párrafo",
+  "Quote": "Cita",
+  "Ordered_list": "Lista ordenada",
+  "Unordered_list": "Lista desordenada",
+  "Check_list_item": "Check list item",
+  "Insert_image": "Insert image",
+  "Insert_formula": "Insert formula",
+  "Formula": "Fórmula",
+  "Insert_file": "Insert file",
+  "Code": "Inline code",
+  "Code_block": "Code block",
+  "Insert_link": "Insert link",
+  "Insert_table": "Insert table",
+  "Valid_values_for_rows_and_columns": "Valid values for the number of rows and columns are 0 to 50",
+  "Save": "Guardar",
+  "More": "Más",
+  "Invalid_url": "URL Inválida",
+  "Link_address": "Dirección del enlace",
+  "Image_address": "Dirección de la imagen",
+  "Submit": "Enviar",
+  "Cancel": "Cancelar",
+  "Switch_to_plain_text_editor": "Cambiar a editor de texto sin formato",
+  "Switch_to_rich_text_editor": "Cambiar a editor de texto enriquecido",
+  "Switch_to_viewer": "Cambiar a visualizador Markdown",
+  "Help": "Ayuda",
+  "Column": "Columna",
+  "Row": "Fila",
+  "Delete_table": "Delete table",
+  "Delete_row": "Delete row",
+  "Delete_column": "Delete column",
+  "Insert_row": "Insert row",
+  "Insert_column": "Insert column",
+  "Set_align": "Establecer alineación",
+  "Left": "Izquierda",
+  "Center": "Centrar",
+  "Right": "derecha",
+  "File_saved": "Archivo guardado",
+  "File_failed_to_save": "Fallo al guardar archivo",
+  "Back_to_parent_directory":"Volver a la carpeta superior",
+  "Edit": "Editar",
+  "Copy": "Copiar",
+  "Copied": "Copiado",
+  "Internal_link": "Enlace interno",
+  "Copy_internal_link": "El enlace interno ha sido copiado al portapapeles",
+  "Internal_link_desc": "Un enlace interno es un enlace a un archivo o carpeta que puede ser accedido por usuarios con permiso de lectura al archivo o carpeta. ",
+  "Share": "Compartir",
+  "Share_link": "Compartir enlace",
+  "Generate": "Generar",
+  "Add_password_protection": "Agregar protección por contraseña",
+  "Password": "Contraseña ",
+  "At_least_8_characters": "al menos 8 caracteres",
+  "Password_again": "Repetir contraseña",
+  "Add_auto_expiration": "Agregar vencimiento automático",
+  "Days": "días",
+  "Please_enter_password": "Ingresa una contraseña",
+  "Greater_than_or_equal_to": "Mayor o igual que",
+  "Less_than_or_equal_to": "Menor o igual que",
+  "Set_permission": "Establecer permiso",
+  "Preview_and_download": "Vista previa y descargar",
+  "Preview_only": "Vista previa solamente",
+  "Please_enter_valid_days": "Ingresa cantidad válida de días",
+  "Please_enter_a_non-negative_integer": "Por favor, ingrese un número entero no negativo",
+  "Please_enter_days": "Ingresa cantidad de días",
+  "Password_is_too_short": "Contraseña demasiado corta",
+  "Passwords_do_not_match": "Las contraseñas no concuerdan",
+  "Return_to_wiki_page": "Volver a la página del Wiki",
+  "Insert_network_image": "Insertar imágen desde la red",
+  "Upload_local_image": "Subir imagen local",
+  "Add_link": "Agregar enlace",
+  "File_history": "File history",
+  "History_version": "History versions",
+  "Back_to_viewer": "Back to viewer",
+  "Link_title": "Título del enlace",
+  "Local_draft": "Borrador local",
+  "Use_draft": "Usar borrador",
+  "Delete_draft": "Eliminar borrador",
+  "You_have_an_unsaved_draft_do_you_like_to_use_it": "Tienes un borrador sin guardar. ¿Deseas utilizarlo?",
+  "Local_draft_saved": "Borrador local guardado",
+  "New_draft": "New draft",
+  "View_draft": "View draft",
+  "Publish": "Publicar",
+  "This_file_has_a_draft": "Este archivo tiene un borrador", 
+  "Delete": "Borrar",
+  "Reply": "Responder",
+  "Comment": "Comentar",
+  "Comments": "Comentarios",
+  "All_comments": "All comments",
+  "Resolved_comments": "Resolved comments",
+  "Unresolved_comments": "Unresolved comments",
+  "Total_1_comment": "Total 1 comment",
+  "Total_count_comments": "Total {{count}} comments",
+  "Add_a_comment": "Agregar un comentario...",
+  "No_comment_yet": "No hay comentarios.",
+  "Mark_as_Resolved": "Marcar como Resuelto",
+  "Resubmit": "Resubmit",
+  "Resubmitted": "Resubmitted",
+  "Ask_for_review": "Solicitar revisión",
+  "Review_already_exists": "La revisión ya existe",
+  "View_review": "Ver revisión",
+  "There_is_an_associated_review_with_this_file": "Hay una revisión asociada con este archivo",
+  "Start_review": "Iniciar revisión",
+  "This_file_is_in_draft_stage": "Este archivo está en la etapa de borrador",
+  "This_file_is_in_review_stage": "Este archivo está en estado de revisión.",
+  "This_file_has_been_updated": "Este archivo ha sido actualizado.",
+  "Refresh": "Refrescar",
+  "Related_files": "Related files",
+  "Related_file": "Related file",
+  "No_tags": "Sin etiquetas",
+  "Date": "Fecha",
+  "Participants": "Participantes",
+  "Meeting_note": "Nota de la reunión",
+  "Chooser_document_type": "Elija el tipo de documento",
+  "Empty": "Vacío",
+  "No_related_files": "Sin archivos relacionados",
+  "No_out_line": "No hay esquema",
+  "Editing_files_in_this_browser_can_lead_to_slight_display_problems": "Editar archivos en este navegador puede producir algunos problemas en el display.",
+  "No_document_improvement_suggestion": "No hay sugerencias para mejorar el documento",
+  "Hide_side_panel": "Ocultar panel lateral",
+  "Show_side_panel": "Mostrar panel lateral",
+  "Show_resolved_comments": "Mostrar comentarios resueltos",
+  "Update": "Actualizar",
+  "Width": "Ancho",
+  "Height": "Alto",
+  "Full_screen": "Pantalla completa",
+  "Insert_library_image": "Insertar imagen desde la biblioteca",
+  "Size": "Tamaño",
+  "Location": "Ubicación",
+  "Last_update": "Last update",
+  "Tags": "Rótulos",
+  "Add_participants": "Agregar participantes",
+  "Clear_format": "Clear format",
+  "MarkdownLint": {
+    "missing_h1": {
+      "description": "No hay h1 en el documento",
+      "issue" : "Falta h1"
+    },
+    "heading_end_with_colon": {
+      "description": "Un encabezado no debe finalizar con el signo Dos Puntos",
+      "issue": "El encabezado finaliza con el signo Dos Puntos"
+    },
+    "heading_increase_irregular": {
+      "description": "Los niveles del encabezado sólo deben incrementarse de a uno por vez",
+      "issue": "Problema con nivel de encabezado"
+    }
+  },
+  "Shortcut_help": "Ayuda de atajos",
+  "User_help": {
     "title": "Atajos de teclado",
     "userHelpData": [
       {
@@ -145,6 +201,11 @@
           "Escape_table": "Escape table"
         }
       }, {
+        "shortcutType": "Atajos de fórmula",
+        "shortcutData": {
+          "Insert_Formula": "Insertar Fórmula"
+        }
+      }, {
         "shortcutType":"Inline shortcuts",
         "shortcutData": {
           "Bold": "Negrita",
@@ -165,5 +226,135 @@
         }
       }
     ]
-  }
+  },
+  "The_link_address_is_required": "The link address is required.",
+  "The_link_title_is_required": "The link title is required.",
+  "The_link_address_is_invalid": "The link address is invalid, please enter a correct connection address.",
+  "All_changes_saved": "All changes saved",
+  "Saving": "Guardando...",
+  "Collaborators": "Collaborators",
+  "Online_members": "Online members",
+  "Me": "me",
+  "Server_is_not_connected_Operation_will_be_sent_to_server_later": "Server is not connected. Operation will be sent to server later.",
+  "Server_is_disconnected_Reconnecting": "Server is disconnected. Reconnecting...",
+  "Server_is_reconnected": "Server is reconnected.",
+  "Outline": "Outline",
+  "Headings_you_add_to_the_document_will_appear_here": "Headings you add to the document will appear here",
+  "Open_parent_folder": "Abrir carpeta contenedora",
+  "Redo": "redo",
+  "Undo": "undo",
+  "Open_link": "Open link",
+  "Customize_the_number_of_rows_and_columns": "Customize the number of rows and columns",
+  "Rows": "Filas",
+  "Columns": "Columnas",
+  "Please_enter_title": "Please enter title",
+  "Please_enter_text": "Please enter text",
+  "Row(s)": "row(s)",
+  "Column(s)": "column(s)",
+  "Insert_below": "Insert below",
+  "Insert_above": "Insert above",
+  "Insert_on_the_right": "Insert on the right",
+  "Insert_on_the_left": "Insert on the left",
+  "Starred": "Favoritos",
+  "Unstarred": "Unstarred",
+  "Star": "Marcar",
+  "Unstar": "Desmarcar",
+  "Auto_wrap": "Auto wrap",
+  "Add_comment": "Add comment",
+  "Delete_comment": "Delete comment",
+  "Delete_reply": "Delete reply",
+  "Are_you_sure_to_delete_this_comment": "Are you sure to delete this comment?",
+  "Are_you_sure_to_delete_this_reply": "Are you sure to delete this reply?",
+  "Enter_a_comment": "Enter a comment",
+  "Enter_a_reply": "Enter a reply",
+  "Reopen_discussion" : "Adding a reply will reopen this discussion",
+  "Confirm": "Confirmar",
+  "View_changes": "View changes",
+  "Revision": "Revision",
+  "Error": "Error",
+  "Start_revise": "Start revise",
+  "Failed_to_execute_operation_on_server": "Failed to execute operation on server, the current operation has been withdrawn",
+  "Start_revise_tip": "Create a temporary document and modify on it, merge it back after reviewing changes",
+  "Load_doc_content_error": "Load doc content error",
+  "Sdoc_format_invalid": "The content of the document does not conform to the sdoc specification",
+  "Draft": "Borrador",
+  "Unmark_as_draft": "Unmark as draft",
+  "Background_color": "Background color",
+  "No_color": "No color",
+  "Standard_color": "Standard color",
+  "Recently_used": "Recently used",
+  "More_color": "More color",
+  "White": "White",
+  "Black": "Black",
+  "Blue_grey": "Blue_grey",
+  "Blue": "Blue",
+  "Sky_blue": "Sky_blue",
+  "Green": "Green",
+  "Red": "Red",
+  "Orange": "Orange",
+  "Yellow": "Yellow",
+  "Purple": "Purple",
+  "Light_grey_x": "Light grey {{value}}",
+  "Dark_grey_x": "Dark grey {{value}}",
+  "Light_blue_grey_x": "Light blue grey {{value}}",
+  "Light_blue_x": "Light blue {{value}}",
+  "Light_sky_blue_x": "Light sky blue {{value}}",
+  "Light_green_x": "Light green {{value}}",
+  "Light_red_x": "Light red {{value}}",
+  "Light_orange_x": "Light orange {{value}}",
+  "Light_yellow_x": "Light yellow {{value}}",
+  "Light_purple_x": "Light purple {{value}}",
+  "Dark_blue_grey_x": "Dark blue grey {{value}}",
+  "Dark_blue_x": "Dark blue {{value}}",
+  "Dark_sky_blue_x": "Dark sky blue {{value}}",
+  "Dark_green_x": "Dark green {{value}}",
+  "Dark_red_x": "Dark red {{value}}",
+  "Dark_orange_x": "Dark orange {{value}}",
+  "Dark_yellow_x": "Dark yellow {{value}}",
+  "Dark_purple_x": "Dark purple {{value}}",
+  "Standard_dark_red": "Standard dark red",
+  "Standard_red": "Standard red",
+  "Standard_orange": "Standard orange",
+  "Standard_yellow": "Standard yellow",
+  "Standard_light_green": "Standard light green",
+  "Standard_green": "Standard green",
+  "Standard_light_blue": "Standard light blue",
+  "Standard_blue": "Standard blue",
+  "Standard_dark_blue": "Standard dark blue",
+  "Standard_purple": "Standard purple",
+  "Highlight_color": "Highlight",
+  "Font_color": "Font color",
+  "Default": "Predeterminado",
+  "No_revisions": "No revisions",
+  "1_revision": "1 revision",
+  "x_revisions": "{{count}} revisions",
+  "Creator": "Creador",
+  "Created_time": "Created time",
+  "Created_at": "Created at",
+  "Resolved_tip": "Mark as resolved and hide discussion",
+  "Search_language": "Search language",
+  "Sdoc_error_tip": "The document has errors and cannot be displayed. Please try to fix it automatically by clicking the button below.",
+  "Repair": "Repair",
+  "Font_size": "Font size",
+  "Increase_font_size": "Increase font size",
+  "Reduce_font_size": "Reduce font size",
+  "Font": "Fuente",
+  "All_fonts": "All fonts",
+  "Default_font": "Default font",
+  "Pending_operations_exceed_limit": "There are multiple operations not synced to the server. Please check your network.",
+  "Recently_saved": "Recently saved",
+  "Sdoc_document" : "Sdoc document",
+  "Text_Link": "Text Link",
+  "Icon_and_text_Link": "Icon and text Link",
+  "Card": "Card",
+  "Select_sdoc_document": "Select sdoc document",
+  "Local_file": "Local file",
+  "Internal_server_exec_operations_error": "An exception occurred on the server, please refresh the page and try again",
+  "Failed_to_sync_with_server_operations": "Synchronization with the server failed, please refresh the page",
+  "Style": "Style",
+  "Insert": "Insert",
+  "Image": "Imagen",
+  "Table": "Tabla",
+  "Link": "Enlace",
+  "Transform_to": "Transform to"
 }
