--- a/media/sdoc-editor/locales/fr/sdoc-editor.json
+++ b/media/sdoc-editor/locales/fr/sdoc-editor.json
@@ -1,108 +1,164 @@
 {
-  "bold": "Gras",
-  "italic": "Italique",
-  "inline_code": "Code",
-  "header_one": "Titre 1",
-  "header_two": "Titre 2",
-  "header_three": "Titre 3",
-  "header_four": "Titre 4",
-  "header_five": "Titre 5",
-  "header_six": "Titre 6",
-  "paragraph": "Paragraphe",
-  "quote": "Citation",
-  "ordered_list": "Liste ordonnée",
-  "unordered_list": "Liste non ordonnée",
-  "check_list_item": "Élément liste de vérification",
-  "insert_image": "Insérer image",
-  "code": "Ligne de code",
-  "code_block": "Bloc de code",
-  "insert_link": "Insérer lien",
-  "insert_table": "Insérer table",
-  "save": "Sauvegarder",
-  "more": "Plus",
-  "invalid_url": "L'adresse n'est pas valide",
-  "link_address": "Adresse du lien",
-  "image_address": "Adresse de l'image",
-  "submit": "Soumettre",
-  "cancel": "Annuler",
-  "switch_to_plain_text_editor": "Basculer en éditeur de texte plein",
-  "switch_to_rich_text_editor": "Basculer en éditeur de texte riche",
-  "switch_to_viewer": "Basculer en visualiseur Markdown",
-  "help": "Aide",
-  "Remove_table": "Supprimer la table",
-  "column": "Colonne",
-  "row": "Ligne",
-  "set_align": "Ajuster l'alignement",
-  "left": "Gauche",
-  "center": "Centrer",
-  "right": "Droite",
-  "file_saved": "Fichier sauvegardé.",
-  "file_failed_to_save": "Échec de la sauvegarde du fichier",
-  "star": "Ajouter étoile",
-  "unstar": "Enlever étoile",
-  "back_to_parent_directory":"Retour au répertoire parent",
-  "edit":"éditer",
-  "copy": "Copier",
-  "copied": "Copié",
-  "internal_link": "Lien interne",
-  "copy_internal_link": "Le lien interne a été copié dans le presse-papier",
-  "internal_link_desc": "Un lien interne est un lien vers un fichier ou un dossier accessible en lecture par un utilisateur.",
-  "share": "Partager",
-  "share_link": "Lien de partage",
-  "generate": "Générer",
-  "add_password_protection": "Ajouter un mot de passe de protection",
-  "password": "Mot de passe",
-  "at_least_8_characters": "Au moins 8 caractères",
-  "password_again": "Mot de passe (à nouveau)",
-  "add_auto_expiration": "Ajouter l'expiration automatique",
-  "days": "jours",
-  "please_enter_password": "Entrez un mot de passe",
-  "greater_than_or_equal_to": "Plus grand ou égale à",
-  "less_than_or_equal_to": "Plus petit ou égal à",
-  "set_permission": "Définir la permission",
-  "preview_and_download": "Prévisualiser et télécharger",
-  "preview_only": "Aperçu uniquement",
-  "please_enter_valid_days": "Saisissez un nombre de jours valide",
-  "please_enter_a_non-negative_integer": "Veuillez introduire un intégrateur non-négatif",
-  "please_enter_days": "Veuillez entrer un nombre de jours",
-  "password_is_too_short": "Le mot de passe est trop court",
-  "passwords_do_not_match": "Les mots de passe ne correspondent pas",
-  "return_to_wiki_page": "Retour à la page du Wiki",
-  "insert_network_image": "Insérer une image du réseau",
-  "upload_local_image": "Insérer une image locale",
-  "add_link": "Ajouter un lien",
-  "file_history": "Historique du fichier",
-  "history_version": "Historique des versions",
-  "back_to_viewer": "Retour au visualiseur",
-  "link_title": "Titre du lien",
-  "local_draft": "Brouillon local",
-  "use_draft": "Utiliser le brouillon",
-  "delete_draft": "Supprimer le brouillon",
-  "you_have_an_unsaved_draft_do_you_like_to_use_it": "Vous avez un brouillon qui n'est pas sauvé. Voulez-vous l'utiliser ?",
-  "local_draft_saved": "Brouillon local sauvegardé",
-  "new_draft": "Nouveau brouillon",
-  "edit_draft": "Éditer brouillon",
-  "this_file_has_a_draft": "Ce fichier possède un brouillon.", 
-  "delete": "Supprimer",
-  "comments": "Commentaires",
-  "add_a_comment": "Ajouter un commentaire ...",
-  "no_comment_yet": "Pas encore de commentaire.",
-  "Mark_as_Resolved": "Marqué comme résolu",
-  "ask_for_review": "Demande d'un avis",
-  "review_already_exists": "Un avis existe déjà",
-  "view_review": "Voir l'avis",
-  "there_is_an_associated_review_with_this_file": "Il y a un avis associé à ce fichier",
-  "start_review": "Commencer l'avis",
-  "this_file_is_in_draft_stage": "Ce fichier est à l'état de brouillon",
-  "this_file_is_in_review_stage": "Ce fichier est à l'état d'avis",
-  "this_file_has_been_updated": "Ce fichier à bien été mis à jour.",
-  "refresh": "Rafraichir",
-  "related_files": "Fichiers relatifs",
-  "related_file": "Fichier relatif",
-  "no_tags": "Pas de tag",
-  "no_related_files": "Aucun fichier relatif",
-  "Editing_files_in_this_browser_can_lead_to_slight_display_problems": "",
-  "userHelp": {
+  "Bold": "Gras",
+  "Italic": "Italique",
+  "Underline": "Underline",
+  "Strikethrough": "Barré",
+  "Superscript": "Superscript",
+  "Subscript": "Subscript",
+  "Inline_code": "Code",
+  "Header_one": "Titre 1",
+  "Header_two": "Titre 2",
+  "Header_three": "Titre 3",
+  "Header_four": "Titre 4",
+  "Header_five": "Titre 5",
+  "Header_six": "Titre 6",
+  "Paragraph": "Paragraphe",
+  "Quote": "Blockquote",
+  "Ordered_list": "Liste ordonnée",
+  "Unordered_list": "Liste non ordonnée",
+  "Check_list_item": "Check list item",
+  "Insert_image": "Insert image",
+  "Insert_formula": "Insert formula",
+  "Formula": "Formule",
+  "Insert_file": "Insert file",
+  "Code": "Ligne de code",
+  "Code_block": "Code block",
+  "Insert_link": "Insert link",
+  "Insert_table": "Insert table",
+  "Valid_values_for_rows_and_columns": "Valid values for the number of rows and columns are 0 to 50",
+  "Save": "Sauvegarder",
+  "More": "Plus",
+  "Invalid_url": "L'adresse n'est pas valide.",
+  "Link_address": "Adresse du lien",
+  "Image_address": "Adresse de l'image",
+  "Submit": "Submit",
+  "Cancel": "Annuler",
+  "Switch_to_plain_text_editor": "Basculer en éditeur de texte plein",
+  "Switch_to_rich_text_editor": "Basculer en éditeur de texte riche",
+  "Switch_to_viewer": "Basculer en visualiseur Markdown",
+  "Help": "Aide",
+  "Column": "Colonne",
+  "Row": "Ligne",
+  "Delete_table": "Delete table",
+  "Delete_row": "Delete row",
+  "Delete_column": "Delete column",
+  "Insert_row": "Insert row",
+  "Insert_column": "Insert column",
+  "Set_align": "Ajuster l'alignement",
+  "Left": "Gauche",
+  "Center": "Centrer",
+  "Right": "Droite",
+  "File_saved": "Le fichier a été sauvegardé.",
+  "File_failed_to_save": "Échec de la sauvegarde du fichier",
+  "Back_to_parent_directory":"Retour au répertoire parent",
+  "Edit": "Modifier",
+  "Copy": "Copier",
+  "Copied": "Copié",
+  "Internal_link": "Lien interne",
+  "Copy_internal_link": "Le lien interne a été copié dans le presse-papiers.",
+  "Internal_link_desc": "Un lien interne est un lien vers un fichier ou un dossier accessible en lecture par un utilisateur.",
+  "Share": "Partager",
+  "Share_link": "Share link",
+  "Generate": "Créer",
+  "Add_password_protection": "Ajouter un mot de passe",
+  "Password": "Mot de passe",
+  "At_least_8_characters": "Au moins 8 caractères",
+  "Password_again": "Mot de passe (à nouveau)",
+  "Add_auto_expiration": "Ajouter une date d'expiration",
+  "Days": "jours",
+  "Please_enter_password": "Entrez un mot de passe",
+  "Greater_than_or_equal_to": "Plus grand ou égale à",
+  "Less_than_or_equal_to": "Plus petit ou égal à",
+  "Set_permission": "Définir la permission",
+  "Preview_and_download": "Prévisualiser et télécharger",
+  "Preview_only": "Aperçu uniquement",
+  "Please_enter_valid_days": "Saisissez un nombre de jours valide.",
+  "Please_enter_a_non-negative_integer": "Veuillez introduire un intégrateur non-négatif.",
+  "Please_enter_days": "Veuillez entrer un nombre de jours.",
+  "Password_is_too_short": "Le mot de passe est trop court.",
+  "Passwords_do_not_match": "Les mots de passe ne correspondent pas.",
+  "Return_to_wiki_page": "Retour à la page du Wiki",
+  "Insert_network_image": "Insérer une image du réseau",
+  "Upload_local_image": "Insérer une image locale",
+  "Add_link": "Ajouter un lien",
+  "File_history": "File history",
+  "History_version": "History versions",
+  "Back_to_viewer": "Back to viewer",
+  "Link_title": "Titre du lien",
+  "Local_draft": "Brouillon local",
+  "Use_draft": "Utiliser le brouillon",
+  "Delete_draft": "Supprimer le brouillon",
+  "You_have_an_unsaved_draft_do_you_like_to_use_it": "Vous avez un brouillon qui n'est pas sauvegardé. Voulez-vous l'utiliser ?",
+  "Local_draft_saved": "Brouillon local sauvegardé",
+  "New_draft": "New draft",
+  "View_draft": "View draft",
+  "Publish": "Publier",
+  "This_file_has_a_draft": "Ce fichier possède un brouillon.", 
+  "Delete": "Supprimer",
+  "Reply": "Répondre",
+  "Comment": "Commentaire",
+  "Comments": "Commentaires",
+  "All_comments": "All comments",
+  "Resolved_comments": "Resolved comments",
+  "Unresolved_comments": "Unresolved comments",
+  "Total_1_comment": "Total 1 comment",
+  "Total_count_comments": "Total {{count}} comments",
+  "Add_a_comment": "Ajouter un commentaire",
+  "No_comment_yet": "Aucun commentaire disponible",
+  "Mark_as_Resolved": "Marquer com pris en compte",
+  "Resubmit": "Resubmit",
+  "Resubmitted": "Resubmitted",
+  "Ask_for_review": "Demande d'un avis",
+  "Review_already_exists": "Un avis existe déjà.",
+  "View_review": "Voir l'avis",
+  "There_is_an_associated_review_with_this_file": "Il y a un avis associé à ce fichier.",
+  "Start_review": "Commencer l'avis",
+  "This_file_is_in_draft_stage": "Ce fichier est à l'état de brouillon.",
+  "This_file_is_in_review_stage": "Ce fichier est à l'état d'avis.",
+  "This_file_has_been_updated": "Ce fichier à été mis à jour.",
+  "Refresh": "Rafraichir",
+  "Related_files": "Related files",
+  "Related_file": "Related file",
+  "No_tags": "Pas de tag",
+  "Date": "Date",
+  "Participants": "Participants",
+  "Meeting_note": "Note de réunion",
+  "Chooser_document_type": "Choisir un type de document",
+  "Empty": "Vide",
+  "No_related_files": "Aucun fichier relatif",
+  "No_out_line": "Pas de contour",
+  "Editing_files_in_this_browser_can_lead_to_slight_display_problems": "L'édition de fichiers dans ce navigateur peut entraîner de légers problèmes d'affichage.",
+  "No_document_improvement_suggestion": "Aucune proposition pour améliorer le document",
+  "Hide_side_panel": "Fermer",
+  "Show_side_panel": "Afficher détails",
+  "Show_resolved_comments": "Voir les commentaires pris en compte",
+  "Update": "Mettre à jour",
+  "Width": "Largeur",
+  "Height": "Hauteur",
+  "Full_screen": "Plein écran",
+  "Insert_library_image": "Insérer une image d‘une bibliothèque",
+  "Size": "Taille",
+  "Location": "Emplacement",
+  "Last_update": "Last update",
+  "Tags": "Tags",
+  "Add_participants": "Ajouter des participants",
+  "Clear_format": "Clear format",
+  "MarkdownLint": {
+    "missing_h1": {
+      "description": "Il n'y a pas de h1 dans le document.",
+      "issue" : "h1 manquant"
+    },
+    "heading_end_with_colon": {
+      "description": "La ponctuation de fin de titre ne doit pas être deux points",
+      "issue": "Le titre se termine par côlon."
+    },
+    "heading_increase_irregular": {
+      "description": "Le niveau des titres ne doit être augmenté que d'un niveau à la fois.",
+      "issue": "Problème niveau de titre"
+    }
+  },
+  "Shortcut_help": "Aide raccourcis",
+  "User_help": {
     "title": "Raccourcis clavier",
     "userHelpData": [
       {
@@ -110,7 +166,7 @@
         "shortcutData": {
           "Make_list": "Faire une liste",
           "Make_ordered_list": "Faire une liste ordonnée",
-          "Insert_new_item": "Insérer un nouvel élément",
+          "Insert_new_item": "Insérer un élément",
           "Insert_child_in_item": "Insérer enfant dans l'élément",
           "Increase_depth": "Améliorer la profondeur"
         }
@@ -133,16 +189,21 @@
           "Insert_indent": "Insérer un espace"
         }
       }, {
-        "shortcutType": "Raccourcis blocs de citation",
+        "shortcutType": "Raccourcis blockquote",
         "shortcutData": {
-          "Make_Block_quote": "Faire un bloc de citation",
-          "Escape_Block_quote": "Sortir du bloc de citation"
+          "Make_Block_quote": "Faire un blockquote",
+          "Escape_Block_quote": "Sortir du blockquote"
         }
       }, {
-        "shortcutType": "Raccourcis table",
+        "shortcutType": "Raccourcis tableau",
         "shortcutData": {
-          "Insert_Table_Row": "Insérer une ligne à la table",
+          "Insert_Table_Row": "Insérer une ligne",
           "Escape_table": "Sortir de la table"
+        }
+      }, {
+        "shortcutType": "Raccourcis formule",
+        "shortcutData": {
+          "Insert_Formula": "Insérer formule"
         }
       }, {
         "shortcutType":"Raccourcis en ligne",
@@ -153,9 +214,9 @@
           "Inline_code": "Ligne de code"
         }
       }, {
-        "shortcutType": "Sauvegarder les raccourcis",
+        "shortcutType": "Raccourcis sauvegarde",
         "shortcutData": {
-          "Save_file": "Sauvegarder fichier"
+          "Save_file": "Sauvegarder le fichier"
         }
       }, {
         "shortcutType": "Raccourcis image",
@@ -165,5 +226,135 @@
         }
       }
     ]
-  }
+  },
+  "The_link_address_is_required": "The link address is required.",
+  "The_link_title_is_required": "The link title is required.",
+  "The_link_address_is_invalid": "The link address is invalid, please enter a correct connection address.",
+  "All_changes_saved": "All changes saved",
+  "Saving": "Sauvegarde ...",
+  "Collaborators": "Collaborators",
+  "Online_members": "Online members",
+  "Me": "me",
+  "Server_is_not_connected_Operation_will_be_sent_to_server_later": "Server is not connected. Operation will be sent to server later.",
+  "Server_is_disconnected_Reconnecting": "Server is disconnected. Reconnecting...",
+  "Server_is_reconnected": "Server is reconnected.",
+  "Outline": "Outline",
+  "Headings_you_add_to_the_document_will_appear_here": "Headings you add to the document will appear here",
+  "Open_parent_folder": "Ouvrir dossier parent",
+  "Redo": "redo",
+  "Undo": "undo",
+  "Open_link": "Open link",
+  "Customize_the_number_of_rows_and_columns": "Customize the number of rows and columns",
+  "Rows": "Rows",
+  "Columns": "Colonnes",
+  "Please_enter_title": "Please enter title",
+  "Please_enter_text": "Please enter text",
+  "Row(s)": "row(s)",
+  "Column(s)": "column(s)",
+  "Insert_below": "Insert below",
+  "Insert_above": "Insert above",
+  "Insert_on_the_right": "Insert on the right",
+  "Insert_on_the_left": "Insert on the left",
+  "Starred": "Favoris",
+  "Unstarred": "Unstarred",
+  "Star": "Favoris",
+  "Unstar": "Supprimer",
+  "Auto_wrap": "Auto wrap",
+  "Add_comment": "Add comment",
+  "Delete_comment": "Delete comment",
+  "Delete_reply": "Delete reply",
+  "Are_you_sure_to_delete_this_comment": "Are you sure to delete this comment?",
+  "Are_you_sure_to_delete_this_reply": "Are you sure to delete this reply?",
+  "Enter_a_comment": "Enter a comment",
+  "Enter_a_reply": "Enter a reply",
+  "Reopen_discussion" : "Adding a reply will reopen this discussion",
+  "Confirm": "Confirmer",
+  "View_changes": "View changes",
+  "Revision": "Revision",
+  "Error": "Erreur",
+  "Start_revise": "Start revise",
+  "Failed_to_execute_operation_on_server": "Failed to execute operation on server, the current operation has been withdrawn",
+  "Start_revise_tip": "Create a temporary document and modify on it, merge it back after reviewing changes",
+  "Load_doc_content_error": "Load doc content error",
+  "Sdoc_format_invalid": "The content of the document does not conform to the sdoc specification",
+  "Draft": "Brouillon",
+  "Unmark_as_draft": "Unmark as draft",
+  "Background_color": "Background color",
+  "No_color": "No color",
+  "Standard_color": "Standard color",
+  "Recently_used": "Recently used",
+  "More_color": "More color",
+  "White": "White",
+  "Black": "Black",
+  "Blue_grey": "Blue_grey",
+  "Blue": "Blue",
+  "Sky_blue": "Sky_blue",
+  "Green": "Green",
+  "Red": "Red",
+  "Orange": "Orange",
+  "Yellow": "Yellow",
+  "Purple": "Purple",
+  "Light_grey_x": "Light grey {{value}}",
+  "Dark_grey_x": "Dark grey {{value}}",
+  "Light_blue_grey_x": "Light blue grey {{value}}",
+  "Light_blue_x": "Light blue {{value}}",
+  "Light_sky_blue_x": "Light sky blue {{value}}",
+  "Light_green_x": "Light green {{value}}",
+  "Light_red_x": "Light red {{value}}",
+  "Light_orange_x": "Light orange {{value}}",
+  "Light_yellow_x": "Light yellow {{value}}",
+  "Light_purple_x": "Light purple {{value}}",
+  "Dark_blue_grey_x": "Dark blue grey {{value}}",
+  "Dark_blue_x": "Dark blue {{value}}",
+  "Dark_sky_blue_x": "Dark sky blue {{value}}",
+  "Dark_green_x": "Dark green {{value}}",
+  "Dark_red_x": "Dark red {{value}}",
+  "Dark_orange_x": "Dark orange {{value}}",
+  "Dark_yellow_x": "Dark yellow {{value}}",
+  "Dark_purple_x": "Dark purple {{value}}",
+  "Standard_dark_red": "Standard dark red",
+  "Standard_red": "Standard red",
+  "Standard_orange": "Standard orange",
+  "Standard_yellow": "Standard yellow",
+  "Standard_light_green": "Standard light green",
+  "Standard_green": "Standard green",
+  "Standard_light_blue": "Standard light blue",
+  "Standard_blue": "Standard blue",
+  "Standard_dark_blue": "Standard dark blue",
+  "Standard_purple": "Standard purple",
+  "Highlight_color": "Highlight",
+  "Font_color": "Font color",
+  "Default": "Défaut",
+  "No_revisions": "No revisions",
+  "1_revision": "1 revision",
+  "x_revisions": "{{count}} revisions",
+  "Creator": "Creator",
+  "Created_time": "Created time",
+  "Created_at": "Created at",
+  "Resolved_tip": "Mark as resolved and hide discussion",
+  "Search_language": "Search language",
+  "Sdoc_error_tip": "The document has errors and cannot be displayed. Please try to fix it automatically by clicking the button below.",
+  "Repair": "Repair",
+  "Font_size": "Font size",
+  "Increase_font_size": "Increase font size",
+  "Reduce_font_size": "Reduce font size",
+  "Font": "Police",
+  "All_fonts": "All fonts",
+  "Default_font": "Default font",
+  "Pending_operations_exceed_limit": "There are multiple operations not synced to the server. Please check your network.",
+  "Recently_saved": "Recently saved",
+  "Sdoc_document" : "Sdoc document",
+  "Text_Link": "Text Link",
+  "Icon_and_text_Link": "Icon and text Link",
+  "Card": "Card",
+  "Select_sdoc_document": "Select sdoc document",
+  "Local_file": "Local file",
+  "Internal_server_exec_operations_error": "An exception occurred on the server, please refresh the page and try again",
+  "Failed_to_sync_with_server_operations": "Synchronization with the server failed, please refresh the page",
+  "Style": "Style",
+  "Insert": "Insert",
+  "Image": "Image",
+  "Table": "Tableau",
+  "Link": "Lien",
+  "Transform_to": "Transform to"
 }
