--- a/media/sdoc-editor/locales/it/sdoc-editor.json
+++ b/media/sdoc-editor/locales/it/sdoc-editor.json
@@ -1,108 +1,164 @@
 {
-  "bold": "Grassetto",
-  "italic": "Corsivo",
-  "inline_code": "Codice",
-  "header_one": "Titolo 1",
-  "header_two": "Titolo 2",
-  "header_three": "Titolo 3",
-  "header_four": "Titolo 4",
-  "header_five": "Intestazione 5",
-  "header_six": "Intestazione 6",
-  "paragraph": "Paragrafo",
-  "quote": "Citazione",
-  "ordered_list": "Lista ordinata",
-  "unordered_list": "Lista non ordinata",
-  "check_list_item": "Controlla la voce dell'elenco",
-  "insert_image": "Inserisci Immagine",
-  "code": "Codice in linea",
-  "code_block": "Codice",
-  "insert_link": "Inserisci Collegamento",
-  "insert_table": "Inserisci tabella",
-  "save": "Salvare",
-  "more": "Altro",
-  "invalid_url": "URL non valida",
-  "link_address": "Indirizzo collegamento",
-  "image_address": "Indirizzo Immagine",
-  "submit": "Invia",
-  "cancel": "Annulla",
-  "switch_to_plain_text_editor": "Passa all'Editor di testo semplice",
-  "switch_to_rich_text_editor": "Passa all'Editor di testo formattato",
-  "switch_to_viewer": "Passa alla vista di tipo Markdown",
-  "help": "Aiuto",
-  "Remove_table": "Rimuovere Tabella",
-  "column": "Colonna",
-  "row": "Riga",
-  "set_align": "Imposta allineamento",
-  "left": "Sinistra",
-  "center": "Centrato",
-  "right": "Destra",
-  "file_saved": "File salvato.",
-  "file_failed_to_save": "Errore salvataggio file.",
-  "star": "Aggiungi asterisco",
-  "unstar": "Rimozione asterisco",
-  "back_to_parent_directory":"Torna alla cartella precedente",
-  "edit":"modifica",
-  "copy": "Copia",
-  "copied": "Copiato",
-  "internal_link": "Collegamento interno",
-  "copy_internal_link": "Il collegamento interno è stato copiato negli appunti",
-  "internal_link_desc": "Un collegamento interno è un collegamento a un file o una cartella a cui gli utenti possono accedere con autorizzazione di lettura al file o alla cartella.",
-  "share": "Condividi",
-  "share_link": "Condividi Collegamento",
-  "generate": "Generare",
-  "add_password_protection": "Aggiungi la protezione password",
-  "password": "Password",
-  "at_least_8_characters": "almeno 8 caratteri",
-  "password_again": "Ridigita password",
-  "add_auto_expiration": "Aggiungi la scadenza automatica",
-  "days": "giorni",
-  "please_enter_password": "Per favore, inserisci la password",
-  "greater_than_or_equal_to": "Maggiore o uguale a ",
-  "less_than_or_equal_to": "Minore o uguale  a",
-  "set_permission": "Imposta permessi",
-  "preview_and_download": "Anteprima e download",
-  "preview_only": "Solo Anteprima",
-  "please_enter_valid_days": "Si prega di inserire giorni validi",
-  "please_enter_a_non-negative_integer": "Prego inserire un intero non negativo",
-  "please_enter_days": "Prego inserire i giorni",
-  "password_is_too_short": "La password è troppo corta",
-  "passwords_do_not_match": "Le password non corrispondono",
-  "return_to_wiki_page": "Torna alla pagina Wiki",
-  "insert_network_image": "Inserisci immagine di rete",
-  "upload_local_image": "Inserisci immagine locale",
-  "add_link": "Aggiungi collegamento",
-  "file_history": "Cronologia dei file",
-  "history_version": "Versioni cronologia",
-  "back_to_viewer": "Torma alla vista",
-  "link_title": "Link al titolo",
-  "local_draft": "Bozza locale",
-  "use_draft": "Usa bozza",
-  "delete_draft": "Rimuovi Bozza",
-  "you_have_an_unsaved_draft_do_you_like_to_use_it": "Hai una bozza non salvata. La vuoi utilizzare?",
-  "local_draft_saved": "Bozza salvata in locale",
-  "new_draft": "Nuova Bozza",
-  "edit_draft": "Modifica Bozza",
-  "this_file_has_a_draft": "Questo file è una bozza", 
-  "delete": "Elimina",
-  "comments": "Commenti",
-  "add_a_comment": "Aggiungi un commento...",
-  "no_comment_yet": "Ancora nessun commento.",
-  "Mark_as_Resolved": "Contrassegnato come risolto",
-  "ask_for_review": "Richiedi una revisione",
-  "review_already_exists": "Revisione già esistente",
-  "view_review": "Visualizza revisione",
-  "there_is_an_associated_review_with_this_file": "C'è una recensione associata con questo file.",
-  "start_review": "Inizia Revisione",
-  "this_file_is_in_draft_stage": "Questo file è in fase di bozza.",
-  "this_file_is_in_review_stage": "Questo file è in fase di revisione.",
-  "this_file_has_been_updated": "Questo file è stato aggiornato.",
-  "refresh": "Aggiornare",
-  "related_files": "file correlati",
-  "related_file": "file correlato",
-  "no_tags": "Nessun tag",
-  "no_related_files": "Nessun file correlato",
-  "Editing_files_in_this_browser_can_lead_to_slight_display_problems": "",
-  "userHelp": {
+  "Bold": "Grassetto",
+  "Italic": "Corsivo",
+  "Underline": "Underline",
+  "Strikethrough": "Barrato",
+  "Superscript": "Superscript",
+  "Subscript": "Subscript",
+  "Inline_code": "Codice",
+  "Header_one": "Titolo 1",
+  "Header_two": "Titolo 2",
+  "Header_three": "Titolo 3",
+  "Header_four": "Titolo 4",
+  "Header_five": "Intestazione 5",
+  "Header_six": "Intestazione 6",
+  "Paragraph": "Paragrafo",
+  "Quote": "Citazione",
+  "Ordered_list": "Elenco Ordiniato",
+  "Unordered_list": "Elenco non ordinato",
+  "Check_list_item": "Check list item",
+  "Insert_image": "Insert image",
+  "Insert_formula": "Insert formula",
+  "Formula": "Formula",
+  "Insert_file": "Insert file",
+  "Code": "Codice in linea",
+  "Code_block": "Code block",
+  "Insert_link": "Insert link",
+  "Insert_table": "Insert table",
+  "Valid_values_for_rows_and_columns": "Valid values for the number of rows and columns are 0 to 50",
+  "Save": "Salvare",
+  "More": "Altro",
+  "Invalid_url": "URL non valida",
+  "Link_address": "Indirizzo collegamento",
+  "Image_address": "Indirizzo Immagine",
+  "Submit": "Invia",
+  "Cancel": "Annulla",
+  "Switch_to_plain_text_editor": "Passa all'Editor di testo semplice",
+  "Switch_to_rich_text_editor": "Passa all'Editor di testo formattato",
+  "Switch_to_viewer": "Passa alla vista di tipo Markdown",
+  "Help": "Aiuto",
+  "Column": "Colonna",
+  "Row": "Riga",
+  "Delete_table": "Delete table",
+  "Delete_row": "Delete row",
+  "Delete_column": "Delete column",
+  "Insert_row": "Insert row",
+  "Insert_column": "Insert column",
+  "Set_align": "Imposta allineamento",
+  "Left": "Sinistra",
+  "Center": "Centrato",
+  "Right": "Destra",
+  "File_saved": "File salvato.",
+  "File_failed_to_save": "Errore salvataggio file.",
+  "Back_to_parent_directory":"Torna alla cartella precedente",
+  "Edit": "Modifica",
+  "Copy": "Copia",
+  "Copied": "Copiato",
+  "Internal_link": "Collegamento Interno",
+  "Copy_internal_link": "Il collegamento interno è stato copiato negli appunti",
+  "Internal_link_desc": "Un collegamento interno è un collegamento a un file o una cartella a cui gli utenti possono accedere con autorizzazione di lettura al file o alla cartella.",
+  "Share": "Condividi",
+  "Share_link": "Share link",
+  "Generate": "Generare",
+  "Add_password_protection": "Aggiungi la protezione password",
+  "Password": "Password",
+  "At_least_8_characters": "almeno 8 caratteri",
+  "Password_again": "Ridigita password",
+  "Add_auto_expiration": "Aggiungi la scadenza automatica",
+  "Days": "giorni",
+  "Please_enter_password": "Per favore, inserisci la password",
+  "Greater_than_or_equal_to": "Maggiore o uguale a ",
+  "Less_than_or_equal_to": "Minore o uguale  a",
+  "Set_permission": "Imposta permessi",
+  "Preview_and_download": "Anteprima e download",
+  "Preview_only": "Solo Anteprima",
+  "Please_enter_valid_days": "Si prega di inserire giorni validi",
+  "Please_enter_a_non-negative_integer": "Prego inserire un intero non negativo",
+  "Please_enter_days": "Prego inserire i giorni",
+  "Password_is_too_short": "La password è troppo corta",
+  "Passwords_do_not_match": "Le password non corrispondono",
+  "Return_to_wiki_page": "Torna alla pagina Wiki",
+  "Insert_network_image": "Inserisci immagine di rete",
+  "Upload_local_image": "Inserisci immagine locale",
+  "Add_link": "Aggiungi collegamento",
+  "File_history": "File history",
+  "History_version": "History versions",
+  "Back_to_viewer": "Back to viewer",
+  "Link_title": "Link al titolo",
+  "Local_draft": "Bozza locale",
+  "Use_draft": "Usa bozza",
+  "Delete_draft": "Rimuovi Bozza",
+  "You_have_an_unsaved_draft_do_you_like_to_use_it": "Hai una bozza non salvata. La vuoi utilizzare?",
+  "Local_draft_saved": "Bozza salvata in locale",
+  "New_draft": "New draft",
+  "View_draft": "View draft",
+  "Publish": "Pubblica",
+  "This_file_has_a_draft": "Questo file è una bozza", 
+  "Delete": "Elimina",
+  "Reply": "Rispondi",
+  "Comment": "Commento",
+  "Comments": "Commenti",
+  "All_comments": "All comments",
+  "Resolved_comments": "Resolved comments",
+  "Unresolved_comments": "Unresolved comments",
+  "Total_1_comment": "Total 1 comment",
+  "Total_count_comments": "Total {{count}} comments",
+  "Add_a_comment": "Aggiungi un commento...",
+  "No_comment_yet": "Ancora nessun commento.",
+  "Mark_as_Resolved": "Mark as Resolved",
+  "Resubmit": "Resubmit",
+  "Resubmitted": "Resubmitted",
+  "Ask_for_review": "Richiedi una revisione",
+  "Review_already_exists": "Revisione già esistente",
+  "View_review": "Visualizza revisione",
+  "There_is_an_associated_review_with_this_file": "C'è una recensione associata con questo file.",
+  "Start_review": "Inizia Revisione",
+  "This_file_is_in_draft_stage": "Questo file è in fase di bozza.",
+  "This_file_is_in_review_stage": "Questo file è in fase di revisione.",
+  "This_file_has_been_updated": "Questo file è stato aggiornato.",
+  "Refresh": "Aggiornare",
+  "Related_files": "Related files",
+  "Related_file": "Related file",
+  "No_tags": "Nessun tag",
+  "Date": "Data",
+  "Participants": "Participants",
+  "Meeting_note": "Meeting note",
+  "Chooser_document_type": "Chooser document type",
+  "Empty": "Vuoto",
+  "No_related_files": "Nessun file correlato",
+  "No_out_line": "No outline",
+  "Editing_files_in_this_browser_can_lead_to_slight_display_problems": "Editing files in this browser can lead to slight display problems.",
+  "No_document_improvement_suggestion": "No document improvement suggestion",
+  "Hide_side_panel": "Hide side panel",
+  "Show_side_panel": "Show side panel",
+  "Show_resolved_comments": "Mostra commenti risolti",
+  "Update": "Aggiorna",
+  "Width": "Width",
+  "Height": "Height",
+  "Full_screen": "Full screen",
+  "Insert_library_image": "Insert library image",
+  "Size": "Dimensione",
+  "Location": "Posizione",
+  "Last_update": "Last update",
+  "Tags": "Tag",
+  "Add_participants": "Add participants",
+  "Clear_format": "Clear format",
+  "MarkdownLint": {
+    "missing_h1": {
+      "description": "There is no h1 in the document",
+      "issue" : "Missing h1"
+    },
+    "heading_end_with_colon": {
+      "description": "Trailing punctuation in heading should not be a colon",
+      "issue": "Heading ends width colon"
+    },
+    "heading_increase_irregular": {
+      "description": "Heading levels should only increment by one level at a time",
+      "issue": "Heading level issue"
+    }
+  },
+  "Shortcut_help": "Shortcut help",
+  "User_help": {
     "title": "Tasti rapidi",
     "userHelpData": [
       {
@@ -145,6 +201,11 @@
           "Escape_table": "Escape tabella"
         }
       }, {
+        "shortcutType": "Formula shortcuts",
+        "shortcutData": {
+          "Insert_Formula": "Insert Formula"
+        }
+      }, {
         "shortcutType":"Scorciatoie in linea",
         "shortcutData": {
           "Bold": "Grassetto",
@@ -165,5 +226,135 @@
         }
       }
     ]
-  }
+  },
+  "The_link_address_is_required": "The link address is required.",
+  "The_link_title_is_required": "The link title is required.",
+  "The_link_address_is_invalid": "The link address is invalid, please enter a correct connection address.",
+  "All_changes_saved": "All changes saved",
+  "Saving": "Salvataggio...",
+  "Collaborators": "Collaborators",
+  "Online_members": "Online members",
+  "Me": "me",
+  "Server_is_not_connected_Operation_will_be_sent_to_server_later": "Server is not connected. Operation will be sent to server later.",
+  "Server_is_disconnected_Reconnecting": "Server is disconnected. Reconnecting...",
+  "Server_is_reconnected": "Server is reconnected.",
+  "Outline": "Outline",
+  "Headings_you_add_to_the_document_will_appear_here": "Headings you add to the document will appear here",
+  "Open_parent_folder": "Apri cartella principale",
+  "Redo": "redo",
+  "Undo": "undo",
+  "Open_link": "Open link",
+  "Customize_the_number_of_rows_and_columns": "Customize the number of rows and columns",
+  "Rows": "Righe",
+  "Columns": "Colonne",
+  "Please_enter_title": "Please enter title",
+  "Please_enter_text": "Please enter text",
+  "Row(s)": "row(s)",
+  "Column(s)": "column(s)",
+  "Insert_below": "Insert below",
+  "Insert_above": "Insert above",
+  "Insert_on_the_right": "Insert on the right",
+  "Insert_on_the_left": "Insert on the left",
+  "Starred": "Preferiti",
+  "Unstarred": "Unstarred",
+  "Star": "Marca",
+  "Unstar": "Smarca",
+  "Auto_wrap": "Auto wrap",
+  "Add_comment": "Add comment",
+  "Delete_comment": "Delete comment",
+  "Delete_reply": "Delete reply",
+  "Are_you_sure_to_delete_this_comment": "Are you sure to delete this comment?",
+  "Are_you_sure_to_delete_this_reply": "Are you sure to delete this reply?",
+  "Enter_a_comment": "Enter a comment",
+  "Enter_a_reply": "Enter a reply",
+  "Reopen_discussion" : "Adding a reply will reopen this discussion",
+  "Confirm": "Confirm",
+  "View_changes": "View changes",
+  "Revision": "Revision",
+  "Error": "Errore",
+  "Start_revise": "Start revise",
+  "Failed_to_execute_operation_on_server": "Failed to execute operation on server, the current operation has been withdrawn",
+  "Start_revise_tip": "Create a temporary document and modify on it, merge it back after reviewing changes",
+  "Load_doc_content_error": "Load doc content error",
+  "Sdoc_format_invalid": "The content of the document does not conform to the sdoc specification",
+  "Draft": "Bozza",
+  "Unmark_as_draft": "Unmark as draft",
+  "Background_color": "Background color",
+  "No_color": "No color",
+  "Standard_color": "Standard color",
+  "Recently_used": "Recently used",
+  "More_color": "More color",
+  "White": "White",
+  "Black": "Black",
+  "Blue_grey": "Blue_grey",
+  "Blue": "Blue",
+  "Sky_blue": "Sky_blue",
+  "Green": "Green",
+  "Red": "Red",
+  "Orange": "Orange",
+  "Yellow": "Yellow",
+  "Purple": "Purple",
+  "Light_grey_x": "Light grey {{value}}",
+  "Dark_grey_x": "Dark grey {{value}}",
+  "Light_blue_grey_x": "Light blue grey {{value}}",
+  "Light_blue_x": "Light blue {{value}}",
+  "Light_sky_blue_x": "Light sky blue {{value}}",
+  "Light_green_x": "Light green {{value}}",
+  "Light_red_x": "Light red {{value}}",
+  "Light_orange_x": "Light orange {{value}}",
+  "Light_yellow_x": "Light yellow {{value}}",
+  "Light_purple_x": "Light purple {{value}}",
+  "Dark_blue_grey_x": "Dark blue grey {{value}}",
+  "Dark_blue_x": "Dark blue {{value}}",
+  "Dark_sky_blue_x": "Dark sky blue {{value}}",
+  "Dark_green_x": "Dark green {{value}}",
+  "Dark_red_x": "Dark red {{value}}",
+  "Dark_orange_x": "Dark orange {{value}}",
+  "Dark_yellow_x": "Dark yellow {{value}}",
+  "Dark_purple_x": "Dark purple {{value}}",
+  "Standard_dark_red": "Standard dark red",
+  "Standard_red": "Standard red",
+  "Standard_orange": "Standard orange",
+  "Standard_yellow": "Standard yellow",
+  "Standard_light_green": "Standard light green",
+  "Standard_green": "Standard green",
+  "Standard_light_blue": "Standard light blue",
+  "Standard_blue": "Standard blue",
+  "Standard_dark_blue": "Standard dark blue",
+  "Standard_purple": "Standard purple",
+  "Highlight_color": "Highlight",
+  "Font_color": "Font color",
+  "Default": "Predefinito",
+  "No_revisions": "No revisions",
+  "1_revision": "1 revision",
+  "x_revisions": "{{count}} revisions",
+  "Creator": "Creatore ",
+  "Created_time": "Created time",
+  "Created_at": "Created at",
+  "Resolved_tip": "Mark as resolved and hide discussion",
+  "Search_language": "Search language",
+  "Sdoc_error_tip": "The document has errors and cannot be displayed. Please try to fix it automatically by clicking the button below.",
+  "Repair": "Repair",
+  "Font_size": "Font size",
+  "Increase_font_size": "Increase font size",
+  "Reduce_font_size": "Reduce font size",
+  "Font": "Carattere",
+  "All_fonts": "All fonts",
+  "Default_font": "Default font",
+  "Pending_operations_exceed_limit": "There are multiple operations not synced to the server. Please check your network.",
+  "Recently_saved": "Recently saved",
+  "Sdoc_document" : "Sdoc document",
+  "Text_Link": "Text Link",
+  "Icon_and_text_Link": "Icon and text Link",
+  "Card": "Card",
+  "Select_sdoc_document": "Select sdoc document",
+  "Local_file": "Local file",
+  "Internal_server_exec_operations_error": "An exception occurred on the server, please refresh the page and try again",
+  "Failed_to_sync_with_server_operations": "Synchronization with the server failed, please refresh the page",
+  "Style": "Style",
+  "Insert": "Insert",
+  "Image": "Immagine",
+  "Table": "Tabella",
+  "Link": "Link",
+  "Transform_to": "Transform to"
 }
