--- a/media/sdoc-editor/locales/zh_CN/sdoc-editor.json
+++ b/media/sdoc-editor/locales/zh_CN/sdoc-editor.json
@@ -37,7 +37,7 @@
   "Switch_to_rich_text_editor": "切换至富文本编辑器",
   "Switch_to_viewer": "切换到只读模式",
   "Help": "帮助",
-  "Column": "分栏",
+  "Column": "列",
   "Row": "行",
   "Delete_table": "删除表格",
   "Delete_row": "删除当前行",
@@ -245,8 +245,8 @@
   "Undo": "撤销",
   "Open_link": "打开链接",
   "Customize_the_number_of_rows_and_columns": "自定义行列数",
-  "Rows": "行",
-  "Columns": "列",
+  "Rows": "行数",
+  "Columns": "列数",
   "Please_enter_title": "请输入标题",
   "Please_enter_text": "请输入正文",
   "Row(s)": "行",
